@@ -23,21 +23,19 @@ import com.redhat.rhn.common.db.datasource.SelectMode;
 import com.redhat.rhn.common.db.datasource.WriteMode;
 import com.redhat.rhn.common.hibernate.HibernateFactory;
 import com.redhat.rhn.domain.common.ChecksumType;
-import com.redhat.rhn.domain.kickstart.KickstartableTree;
 import com.redhat.rhn.domain.org.Org;
 import com.redhat.rhn.domain.rhnpackage.Package;
 import com.redhat.rhn.domain.scc.SCCRepository;
 import com.redhat.rhn.domain.server.Server;
 import com.redhat.rhn.domain.user.User;
+import com.redhat.rhn.manager.appstreams.AppStreamsManager;
 import com.redhat.rhn.manager.ssm.SsmChannelDto;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.hibernate.Criteria;
 import org.hibernate.Session;
-import org.hibernate.criterion.MatchMode;
-import org.hibernate.criterion.Projections;
-import org.hibernate.criterion.Restrictions;
+import org.hibernate.query.Query;
+import org.hibernate.type.StandardBasicTypes;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -49,7 +47,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
+
+import javax.persistence.NoResultException;
+import javax.persistence.TypedQuery;
+import javax.persistence.criteria.CriteriaBuilder;
+import javax.persistence.criteria.CriteriaQuery;
+import javax.persistence.criteria.Predicate;
+import javax.persistence.criteria.Root;
 
 /**
  * ChannelFactory
@@ -236,7 +240,6 @@ public class ChannelFactory extends HibernateFactory {
         return singleton.lookupObjectByNamedQuery("ContentSource.findByIdandOrg", Map.of("id", id, "org", orgIn));
     }
 
-
     /**
      * Lookup a content source's filters by id
      * @param id source id
@@ -392,9 +395,7 @@ public class ChannelFactory extends HibernateFactory {
      * @return list of channel architectures
      */
     public static List<ChannelArch> getChannelArchitectures() {
-        Session session = getSession();
-        Criteria criteria = session.createCriteria(ChannelArch.class);
-        return criteria.list();
+        return getSession().createNativeQuery("SELECT * FROM rhnChannelArch", ChannelArch.class).getResultList();
     }
 
     /**
@@ -427,9 +428,10 @@ public class ChannelFactory extends HibernateFactory {
      */
     public static ChannelArch findArchByLabel(String label) {
         Session session = getSession();
-        Criteria criteria = session.createCriteria(ChannelArch.class);
-        criteria.add(Restrictions.eq(LABEL, label));
-        return (ChannelArch) criteria.uniqueResult();
+        String sql = "SELECT * FROM rhnChannelArch WHERE label = :label";
+        return session.createNativeQuery(sql, ChannelArch.class)
+                .setParameter(LABEL, label, StandardBasicTypes.STRING)
+                .uniqueResult();
     }
 
     /**
@@ -452,12 +454,20 @@ public class ChannelFactory extends HibernateFactory {
      */
     public static Channel lookupByLabel(String label) {
         Session session = getSession();
-        Criteria c = session.createCriteria(Channel.class);
-        c.add(Restrictions.eq(LABEL, label));
-        return (Channel) c.uniqueResult();
+        String sql = """
+                SELECT c.*,
+                cl.original_id,
+                CASE
+                WHEN cl.original_id IS NULL THEN 0
+                ELSE 1
+                END AS clazz_
+                FROM rhnChannel c
+                LEFT JOIN rhnChannelCloned cl ON c.id = cl.id
+                WHERE c.label = :label""";
+        return session.createNativeQuery(sql, Channel.class)
+                .setParameter(LABEL, label, StandardBasicTypes.STRING)
+                .uniqueResult();
     }
-
-
 
     /**
      * Returns true if the given channel is globally subscribable for the
@@ -672,6 +682,17 @@ public class ChannelFactory extends HibernateFactory {
     }
 
     /**
+     * Get a list of modular channels in users org
+     * @param user the logged in user
+     * @return List of modular channels
+     */
+    public static List<Channel> listModularChannels(User user) {
+        List<Channel> channels = singleton.listObjectsByNamedQuery("Channel.findModularChannels",
+                Map.of("org_id", user.getOrg().getId()));
+        return channels;
+    }
+
+    /**
      * Find checksumtype by label
      * @param checksum checksum label
      * @return ChecksumType instance for given label
@@ -733,6 +754,18 @@ public class ChannelFactory extends HibernateFactory {
     }
 
     /**
+     * Get cloned errata ids for a channel
+     * @param cid the channel id
+     * @return List of errata ids
+     */
+    public static List<Long> getClonedErrataIds(Long cid) {
+        if (cid == null) {
+            return new ArrayList<>();
+        }
+        return singleton.listObjectsByNamedQuery("Channel.getClonedErrataOriginalIdList", Map.of("cid", cid));
+    }
+
+    /**
      * Looksup the number of Packages in a channel
      * @param channel the Channel who's package count you are interested in.
      * @return number of packages in this channel.
@@ -768,6 +801,27 @@ public class ChannelFactory extends HibernateFactory {
         }
         Collections.sort(list);
         return list.get(0);
+    }
+
+    /**
+     * Lookup ChannelSyncFlag object for a specfic channel
+     * @param channel The channel object on which the lookup should be performed
+     * @return ChannelSyncFlag object containing all flag settings for a specfic channel
+     */
+    public static ChannelSyncFlag lookupChannelReposyncFlag(Channel channel) {
+        return getSession()
+                .createNativeQuery(
+                        "SELECT * FROM rhnChannelSyncFlag WHERE channel_id = :channel", ChannelSyncFlag.class)
+                .setParameter("channel", channel.getId(), StandardBasicTypes.LONG)
+                .getSingleResult();
+    }
+
+    /**
+     * Save a ChannelSyncFlag object for a specfic channel
+     * @param flags The ChannelSyncFlag object which should be added to channel
+     */
+    public static void save(ChannelSyncFlag flags) {
+        singleton.saveObject(flags);
     }
 
     /**
@@ -903,7 +957,7 @@ public class ChannelFactory extends HibernateFactory {
                 .stream()
                 .map(Arrays::asList)
                 .map(r -> new SsmChannelDto((long)r.get(0), (String)r.get(1), r.get(2) != null))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -1036,8 +1090,8 @@ public class ChannelFactory extends HibernateFactory {
 
         List<Package> pkgs = HibernateFactory.getSession()
           .getNamedQuery("Channel.packageByFileName")
-          .setString("pathlike", "%/" + fileName)
-          .setLong("channel_id", channel.getId())
+          .setParameter("pathlike", "%/" + fileName, StandardBasicTypes.STRING)
+          .setParameter("channel_id", channel.getId(), StandardBasicTypes.LONG)
           .list();
         if (pkgs.isEmpty()) {
             return null;
@@ -1057,12 +1111,11 @@ public class ChannelFactory extends HibernateFactory {
             String fileName, int headerStart, int headerEnd) {
 
         List<Package> pkgs = HibernateFactory.getSession()
-          .getNamedQuery("Channel.packageByFileNameAndRange")
-          .setString("pathlike", "%/" + fileName)
-          .setLong("channel_id", channel.getId())
-          .setInteger("headerStart", headerStart)
-          .setInteger("headerEnd", headerEnd)
-          .list();
+                .getNamedQuery("Channel.packageByFileNameAndRange")
+                .setParameter("pathlike", "%/" + fileName, StandardBasicTypes.STRING)
+                .setParameter("channel_id", channel.getId(), StandardBasicTypes.LONG)
+                .setParameter("headerStart", headerStart, StandardBasicTypes.INTEGER)
+                .setParameter("headerEnd", headerEnd, StandardBasicTypes.INTEGER).list();
         if (pkgs.isEmpty()) {
             return null;
         }
@@ -1078,10 +1131,12 @@ public class ChannelFactory extends HibernateFactory {
      * @return true of the channels contains any distros
      */
     public static boolean containsDistributions(Channel ch) {
-        Criteria criteria = getSession().createCriteria(KickstartableTree.class);
-        criteria.setProjection(Projections.rowCount());
-        criteria.add(Restrictions.eq("channel", ch));
-        return ((Number)criteria.uniqueResult()).intValue() > 0;
+        Session session = getSession();
+        String sql
+                = "SELECT COUNT(*) FROM rhnKickstartableTree WHERE channel_id = :channelId";
+        Number count = (Number) session.createNativeQuery(sql)
+                .setParameter("channelId", ch.getId(), StandardBasicTypes.LONG).getSingleResult();
+        return count.intValue() > 0;
     }
 
     /**
@@ -1194,9 +1249,8 @@ public class ChannelFactory extends HibernateFactory {
      */
     @SuppressWarnings("unchecked")
     public static List<ContentSource> listVendorContentSources() {
-        Criteria criteria = getSession().createCriteria(ContentSource.class);
-        criteria.add(Restrictions.isNull("org"));
-        return criteria.list();
+        return getSession().createNativeQuery("SELECT * FROM rhnContentSource WHERE org_id IS NULL",
+                ContentSource.class).getResultList();
     }
 
     /**
@@ -1205,23 +1259,59 @@ public class ChannelFactory extends HibernateFactory {
      * @return vendor content source if it exists
      */
     public static ContentSource findVendorContentSourceByRepo(String repoUrl) {
-        Criteria criteria = getSession().createCriteria(ContentSource.class);
-        criteria.add(Restrictions.isNull("org"));
+        CriteriaBuilder cb = getSession().getCriteriaBuilder();
+        CriteriaQuery<ContentSource> cq = cb.createQuery(ContentSource.class);
+        Root<ContentSource> root = cq.from(ContentSource.class);
+
+        // Create predicates for the query
+        Predicate isOrgNull = cb.isNull(root.get("org"));
+        Predicate sourceUrlPredicate;
+
         if (repoUrl.contains("mirrorlist.centos.org") || repoUrl.contains("mirrors.rockylinux.org")) {
-            criteria.add(Restrictions.eq("sourceUrl", repoUrl));
+            sourceUrlPredicate = cb.equal(root.get("sourceUrl"), repoUrl);
         }
         else {
-            String [] parts = repoUrl.split("\\?");
+            String[] parts = repoUrl.split("\\?");
             String repoUrlPrefix = parts[0];
             if (parts.length > 1) {
-                criteria.add(Restrictions.like("sourceUrl", repoUrlPrefix + '?',
-                        MatchMode.START));
+                sourceUrlPredicate = cb.like(root.get("sourceUrl"), repoUrlPrefix + '%');
             }
             else {
-                criteria.add(Restrictions.eq("sourceUrl", repoUrlPrefix));
+                sourceUrlPredicate = cb.equal(root.get("sourceUrl"), repoUrlPrefix);
             }
         }
-        return (ContentSource) criteria.uniqueResult();
+
+        // Combine predicates
+        cq.where(cb.and(isOrgNull, sourceUrlPredicate));
+
+        // Create and execute the query
+        TypedQuery<ContentSource> query = getSession().createQuery(cq);
+        ContentSource contentSource;
+        try {
+            contentSource = query.getSingleResult();
+        }
+        catch (NoResultException e) {
+            contentSource = null;
+        }
+
+        return contentSource;
+    }
+
+    /**
+     * Find {@link ContentSource} with source url containing urlPart.
+     * Uses SQL wildcard paramter '%'. When urlPart does contain a wildcard parameter, it is passed directly to
+     * the query. If not, a wildcard is added and the begining and the end.
+     * @param urlPart part of the url
+     * @return list of found {@link ContentSource}
+     */
+    public static List<ContentSource> findContentSourceLikeUrl(String urlPart) {
+        String urllike = urlPart;
+        if (!urlPart.contains("%")) {
+            urllike = String.format("%%%s%%", urlPart);
+        }
+        return getSession().createNamedQuery("ContentSource.findLikeUrl", ContentSource.class)
+                .setParameter("urllike", urllike)
+                .list();
     }
 
     /**
@@ -1231,10 +1321,18 @@ public class ChannelFactory extends HibernateFactory {
      * @return channel product
      */
     public static ChannelProduct findChannelProduct(String product, String version) {
-        Criteria criteria = getSession().createCriteria(ChannelProduct.class);
-        criteria.add(Restrictions.eq("product", product));
-        criteria.add(Restrictions.eq("version", version));
-        return (ChannelProduct) criteria.uniqueResult();
+        Session session = getSession();
+        String sql
+                = "SELECT * FROM rhnChannelProduct WHERE product = :product AND version = :version";
+        Query<ChannelProduct> query = session.createNativeQuery(sql, ChannelProduct.class);
+        query.setParameter("product", product, StandardBasicTypes.STRING);
+        query.setParameter("version", version, StandardBasicTypes.STRING);
+        try {
+            return query.getSingleResult();
+        }
+        catch (NoResultException e) {
+            return null;
+        }
     }
 
     /**
@@ -1308,13 +1406,23 @@ public class ChannelFactory extends HibernateFactory {
      * @param to  the target Channel
      */
     public static void cloneModulesMetadata(Channel from, Channel to) {
-        if (to.isModular()) {
-            to.getModules().clear();
-            getSession().flush();
+        if (!from.isModular()) {
+            if (to.isModular()) {
+                HibernateFactory.getSession().delete(to.getModules());
+                to.setModules(null);
+            }
         }
-        if (from.isModular()) {
-            from.getModules().forEach(fromModule ->
-                    to.addModules(new Modules(fromModule.getRelativeFilename(), fromModule.getLastModified())));
+        else {
+            // clone appstreams
+            if (AppStreamsManager.listChannelAppStreams(to.getId()).isEmpty()) {
+                AppStreamsManager.cloneAppStreams(to, from);
+            }
+            if (!to.isModular()) {
+                Modules modules = new Modules();
+                modules.setChannel(to);
+                to.setModules(modules);
+            }
+            to.getModules().setRelativeFilename(from.getModules().getRelativeFilename());
         }
     }
 }
