@@ -23,14 +23,15 @@ import com.redhat.rhn.domain.channel.ChannelFamily;
 import com.redhat.rhn.domain.channel.ChannelFamilyFactory;
 import com.redhat.rhn.domain.channel.test.ChannelFactoryTest;
 import com.redhat.rhn.domain.channel.test.ChannelFamilyFactoryTest;
+import com.redhat.rhn.domain.channel.test.ChannelFamilyTest;
 import com.redhat.rhn.domain.common.ManagerInfoFactory;
-import com.redhat.rhn.domain.credentials.Credentials;
 import com.redhat.rhn.domain.credentials.CredentialsFactory;
+import com.redhat.rhn.domain.credentials.SCCCredentials;
+import com.redhat.rhn.domain.product.ChannelTemplate;
 import com.redhat.rhn.domain.product.ReleaseStage;
 import com.redhat.rhn.domain.product.SUSEProduct;
 import com.redhat.rhn.domain.product.SUSEProductChannel;
 import com.redhat.rhn.domain.product.SUSEProductFactory;
-import com.redhat.rhn.domain.product.SUSEProductSCCRepository;
 import com.redhat.rhn.domain.rhnpackage.PackageFactory;
 import com.redhat.rhn.domain.scc.SCCRepository;
 import com.redhat.rhn.domain.scc.SCCRepositoryAuth;
@@ -38,6 +39,9 @@ import com.redhat.rhn.domain.scc.SCCRepositoryTokenAuth;
 import com.redhat.rhn.domain.server.InstalledProduct;
 import com.redhat.rhn.domain.server.Server;
 import com.redhat.rhn.domain.user.User;
+import com.redhat.rhn.frontend.xmlrpc.sync.content.ContentSyncSource;
+import com.redhat.rhn.frontend.xmlrpc.sync.content.LocalDirContentSyncSource;
+import com.redhat.rhn.frontend.xmlrpc.sync.content.SCCContentSyncSource;
 import com.redhat.rhn.manager.content.ContentSyncException;
 import com.redhat.rhn.manager.content.ContentSyncManager;
 import com.redhat.rhn.manager.content.ProductTreeEntry;
@@ -48,12 +52,12 @@ import com.suse.salt.netapi.parser.JsonParser;
 import com.suse.scc.model.ChannelFamilyJson;
 import com.suse.scc.model.SCCProductJson;
 import com.suse.scc.model.SCCRepositoryJson;
-import com.suse.scc.model.UpgradePathJson;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
 
+import org.apache.commons.collections.CollectionUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.hibernate.Session;
@@ -61,17 +65,19 @@ import org.hibernate.Session;
 import java.io.File;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.nio.file.Path;
+import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Random;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Utility methods for creating SUSE related test data.
  */
 public class SUSEProductTestUtils extends HibernateFactory {
 
+    private static final Random RANDOM = new Random();
     private static Logger log = LogManager.getLogger(SUSEProductTestUtils.class);
 
     /**
@@ -85,15 +91,25 @@ public class SUSEProductTestUtils extends HibernateFactory {
      * @param family the channel family
      * @return the newly created SUSE product
      */
-    public static SUSEProduct createTestSUSEProduct(ChannelFamily family) {
+    public static SUSEProduct createTestSUSEProduct(ChannelFamily family) throws Exception {
+        return createTestSUSEProduct(family, TestUtils.randomString().toLowerCase());
+    }
+
+    /**
+     * Create a SUSE product (which is different from a {@link com.redhat.rhn.domain.channel.ChannelProduct}).
+     * @param family the channel family
+     * @param name the product name
+     * @return the newly created SUSE product
+     * @throws Exception if anything goes wrong
+     */
+    public static SUSEProduct createTestSUSEProduct(ChannelFamily family, String name) throws Exception {
         SUSEProduct product = new SUSEProduct();
-        String name = TestUtils.randomString().toLowerCase();
         product.setName(name);
         product.setVersion("1");
         product.setFriendlyName("SUSE Test product " + name);
         product.setArch(PackageFactory.lookupPackageArchByLabel("x86_64"));
         product.setRelease("test");
-        product.setProductId(new Random().nextInt(999999));
+        product.setProductId(RANDOM.nextInt(999999));
         product.setBase(true);
         product.setReleaseStage(ReleaseStage.released);
         product.setChannelFamily(family);
@@ -104,7 +120,36 @@ public class SUSEProductTestUtils extends HibernateFactory {
     }
 
     /**
-     * Create SUSEProductSCCRepository for the product
+     * Create a SUSEProduct for test with the given pieces of information.
+     * @param user the user
+     * @param name the name of the product
+     * @param version the version
+     * @param arch the architecture
+     * @param family the channel family
+     * @param isBase true if it is a base product
+     * @return the created SUSEProduct
+     */
+    public static SUSEProduct createTestSUSEProduct(User user, String name, String version, String arch, String family,
+                                                    boolean isBase) {
+        SUSEProduct product = new SUSEProduct();
+
+        product.setName(name);
+        product.setVersion(version);
+        product.setFriendlyName("SUSE Test product " + name);
+        product.setArch(PackageFactory.lookupPackageArchByLabel(arch));
+        product.setRelease("test");
+        product.setProductId(RANDOM.nextInt(999999));
+        product.setBase(isBase);
+        product.setReleaseStage(ReleaseStage.released);
+        product.setChannelFamily(ChannelFamilyTest.ensureChannelFamilyExists(user, family));
+
+        product = TestUtils.saveAndReload(product);
+
+        return product;
+    }
+
+    /**
+     * Create ChannelTemplate for the product
      * @param baseProduct Base product
      * @param baseChannel base channe
      * @param product product
@@ -113,11 +158,11 @@ public class SUSEProductTestUtils extends HibernateFactory {
      */
     public static void populateRepository(SUSEProduct baseProduct, Channel baseChannel, SUSEProduct product,
                                     Channel channel, User user) {
-        Credentials sccc = SUSEProductTestUtils.createSCCCredentials("dummy", user);
+        SCCCredentials sccc = SUSEProductTestUtils.createSCCCredentials("dummy", user);
         SCCRepository repository = SUSEProductTestUtils.createSCCRepository();
         SUSEProductTestUtils.createSCCRepositoryTokenAuth(sccc, repository);
 
-        SUSEProductSCCRepository ltssSP1ProdRepo = new SUSEProductSCCRepository();
+        ChannelTemplate ltssSP1ProdRepo = new ChannelTemplate();
         ltssSP1ProdRepo.setRepository(repository);
         ltssSP1ProdRepo.setRootProduct(baseProduct);
         ltssSP1ProdRepo.setProduct(product);
@@ -220,10 +265,38 @@ public class SUSEProductTestUtils extends HibernateFactory {
     }
 
     /**
+     * Install the specified products on the server
+     * @param server the server
+     * @param products the collection of products to install
+     */
+    public static void installSUSEProductsOnServer(Server server, Collection<SUSEProduct> products) {
+        if (CollectionUtils.isEmpty(products)) {
+            return;
+        }
+
+        products.stream()
+                .map(product -> {
+                    InstalledProduct prd = new InstalledProduct();
+
+                    prd.setName(product.getName());
+                    prd.setVersion(product.getVersion());
+                    prd.setRelease(product.getRelease());
+                    prd.setArch(product.getArch());
+                    prd.setBaseproduct(product.isBase());
+
+                    return prd;
+                })
+                .forEach(server::addInstalledProduct);
+
+        HibernateFactory.getSession().flush();
+    }
+
+    /**
      * Create two standard SUSE Vendor products.
      *
      * SLES12 SP1 x86_64
      * SLE-HA12 SP1 x86_64
+     * SLE-Micro 5.4 x86_64
      */
     public static void createVendorSUSEProducts() {
         ChannelFamily cfsles = ChannelFamilyFactory.lookupByLabel("7261", null);
@@ -240,6 +313,14 @@ public class SUSEProductTestUtils extends HibernateFactory {
             cfha.setLabel("SLE-HAE-X86");
             cfha.setName("SUSE Linux Enterprise High Availability Extension (x86)");
             TestUtils.saveAndFlush(cfha);
+        }
+
+        ChannelFamily cfslem = ChannelFamilyFactory.lookupByLabel("MICROOS-X86", null);
+        if (cfslem == null) {
+            cfslem = new ChannelFamily();
+            cfslem.setLabel("MICROOS-X86");
+            cfslem.setName("SUSE Linux Enterprise Micro X86");
+            TestUtils.saveAndFlush(cfslem);
         }
 
         SUSEProduct product = new SUSEProduct();
@@ -317,6 +398,58 @@ public class SUSEProductTestUtils extends HibernateFactory {
         product.setBase(false);
         product.setReleaseStage(ReleaseStage.released);
         TestUtils.saveAndFlush(product);
+
+        product = new SUSEProduct();
+        product.setName("sle-micro");
+        product.setVersion("5.4");
+        product.setFriendlyName("SUSE Linux Enterprise Micro 5.4 x86_64");
+        product.setArch(PackageFactory.lookupPackageArchByLabel("x86_64"));
+        product.setProductId(2574);
+        product.setChannelFamily(cfslem);
+        product.setBase(true);
+        product.setReleaseStage(ReleaseStage.released);
+        TestUtils.saveAndFlush(product);
+
+        ChannelFamily cfSlesSap = ChannelFamilyFactory.lookupByLabel("AiO", null);
+        if (cfSlesSap == null) {
+            cfSlesSap = new ChannelFamily();
+            cfSlesSap.setLabel("AiO");
+            cfSlesSap.setName("SUSE Linux Enterprise Server for SAP");
+            TestUtils.saveAndFlush(cfSlesSap);
+        }
+
+        product = new SUSEProduct();
+        product.setName("sles_sap");
+        product.setVersion("15.5");
+        product.setFriendlyName("SUSE Linux Enterprise Server for SAP Applications 15 SP5 x86_64");
+        product.setArch(PackageFactory.lookupPackageArchByLabel("x86_64"));
+        product.setProductId(2467);
+        product.setChannelFamily(cfSlesSap);
+        product.setBase(true);
+        product.setReleaseStage(ReleaseStage.released);
+        TestUtils.saveAndFlush(product);
+
+        product = new SUSEProduct();
+        product.setName("sle-module-certifications");
+        product.setVersion("15.5");
+        product.setFriendlyName("Certifications Module 15 SP5 x86_64");
+        product.setArch(PackageFactory.lookupPackageArchByLabel("x86_64"));
+        product.setProductId(2558);
+        product.setChannelFamily(cfsles);
+        product.setBase(false);
+        product.setReleaseStage(ReleaseStage.released);
+        TestUtils.saveAndFlush(product);
+
+        product = new SUSEProduct();
+        product.setName("sle-module-basesystem");
+        product.setVersion("15.5");
+        product.setFriendlyName("Basesystem Module 15 SP5 x86_64");
+        product.setArch(PackageFactory.lookupPackageArchByLabel("x86_64"));
+        product.setProductId(2474);
+        product.setChannelFamily(cfsles);
+        product.setBase(false);
+        product.setReleaseStage(ReleaseStage.released);
+        TestUtils.saveAndFlush(product);
     }
 
     /**
@@ -352,6 +485,7 @@ public class SUSEProductTestUtils extends HibernateFactory {
         channel.setOrg(null);
         channel = TestUtils.saveAndReload(channel);
         SUSEProductTestUtils.createTestSUSEProductChannel(channel, product, true);
+        channel = TestUtils.saveAndReload(channel);
         return channel;
     }
 
@@ -406,10 +540,6 @@ public class SUSEProductTestUtils extends HibernateFactory {
                 ContentSyncManager.class.getResourceAsStream(testDataPath + "productsUnscoped.json"));
         List<SCCProductJson> products = gson.fromJson(
                 inputStreamReader, new TypeToken<List<SCCProductJson>>() { }.getType());
-        InputStreamReader inputStreamReader2 = new InputStreamReader(
-                ContentSyncManager.class.getResourceAsStream(testDataPath + "upgrade_paths.json"));
-        List<UpgradePathJson> upgradePaths = gson.fromJson(
-                inputStreamReader2, new TypeToken<List<UpgradePathJson>>() { }.getType());
         InputStreamReader inputStreamReader3 = new InputStreamReader(
                 ContentSyncManager.class.getResourceAsStream(testDataPath + "channel_families.json"));
         List<ChannelFamilyJson> channelFamilies = gson.fromJson(
@@ -434,7 +564,7 @@ public class SUSEProductTestUtils extends HibernateFactory {
                     inputStreamReader7, new TypeToken<List<SCCProductJson>>() { }.getType());
             products.addAll(addProducts);
             addRepos.addAll(ContentSyncManager.collectRepos(
-                    ContentSyncManager.flattenProducts(addProducts).collect(Collectors.toList())));
+                    ContentSyncManager.flattenProducts(addProducts).toList()));
         }
         repositories.addAll(addRepos);
 
@@ -445,7 +575,7 @@ public class SUSEProductTestUtils extends HibernateFactory {
                 return true;
             }
         };
-        Credentials credentials = null;
+        ContentSyncSource contentSyncSource = null;
         if (fromdir) {
             Config.get().setString(ContentSyncManager.RESOURCE_PATH, "sumatest");
             csm = new ContentSyncManager() {
@@ -455,31 +585,33 @@ public class SUSEProductTestUtils extends HibernateFactory {
                     return true;
                 }
             };
+
+            contentSyncSource = new LocalDirContentSyncSource(Path.of("sumatest"));
         }
         else {
-            credentials = CredentialsFactory.createSCCCredentials();
-            credentials.setPassword("dummy");
+            SCCCredentials credentials = CredentialsFactory.createSCCCredentials("dummy", "dummy");
             credentials.setUrl("dummy");
-            credentials.setUsername("dummy");
             credentials.setUser(admin);
             CredentialsFactory.storeCredentials(credentials);
+
+            contentSyncSource = new SCCContentSyncSource(credentials);
         }
 
         csm.updateChannelFamilies(channelFamilies);
-        csm.updateSUSEProducts(products, upgradePaths, staticTree, addRepos);
+        csm.updateSUSEProducts(products, staticTree, addRepos);
         if (withRepos) {
             HibernateFactory.getSession().flush();
             HibernateFactory.getSession().clear();
-            csm.refreshRepositoriesAuthentication(repositories, credentials, null);
+            csm.refreshRepositoriesAuthentication(repositories, contentSyncSource, null);
         }
         ManagerInfoFactory.setLastMgrSyncRefresh();
     }
 
     public static void addChannelsForProduct(SUSEProduct product) {
         ContentSyncManager csm = new ContentSyncManager();
-        product.getRepositories()
+        product.getChannelTemplates()
         .stream()
-        .filter(SUSEProductSCCRepository::isMandatory)
+        .filter(ChannelTemplate::isMandatory)
         .forEach(pr -> {
             try {
                 if (pr.getParentChannelLabel() != null &&
@@ -505,7 +637,7 @@ public class SUSEProductTestUtils extends HibernateFactory {
     public static void addChannelsForProductAndParent(SUSEProduct product, SUSEProduct root,
             boolean mandatory, List<Long> optionalChannelIds) {
         ContentSyncManager csm = new ContentSyncManager();
-        product.getRepositories()
+        product.getChannelTemplates()
         .stream()
         .filter(pr -> pr.getRootProduct().equals(root))
         .filter(pr -> (mandatory && pr.isMandatory()) || optionalChannelIds.contains(pr.getRepository().getSccId()))
@@ -617,7 +749,7 @@ public class SUSEProductTestUtils extends HibernateFactory {
      */
     public static SCCRepository createSCCRepository() {
         SCCRepository bRepo = new SCCRepository();
-        bRepo.setSccId(new Random().nextLong());
+        bRepo.setSccId(RANDOM.nextLong());
         bRepo.setAutorefresh(true);
         bRepo.setDescription(TestUtils.randomString());
         bRepo.setDistroTarget("sle-15-x86_64");
@@ -627,24 +759,21 @@ public class SUSEProductTestUtils extends HibernateFactory {
         return TestUtils.saveAndReload(bRepo);
     }
 
-    public static SCCRepositoryAuth createSCCRepositoryTokenAuth(Credentials c, SCCRepository r) {
+    public static SCCRepositoryAuth createSCCRepositoryTokenAuth(SCCCredentials c, SCCRepository r) {
         SCCRepositoryAuth auth = new SCCRepositoryTokenAuth(TestUtils.randomString().toLowerCase());
         auth.setRepo(r);
         auth.setCredentials(c);
         return TestUtils.saveAndReload(auth);
     }
 
-    public static Credentials createSCCCredentials(String name, User user) {
-        Credentials credentials = createSecondarySCCCredentials(name, user);
-        credentials.setUrl("dummy");
+    public static SCCCredentials createSCCCredentials(String name, User user) {
+        SCCCredentials credentials = createSecondarySCCCredentials(name, user);
         CredentialsFactory.storeCredentials(credentials);
         return credentials;
     }
 
-    public static Credentials createSecondarySCCCredentials(String name, User user) {
-        Credentials credentials = CredentialsFactory.createSCCCredentials();
-        credentials.setPassword(TestUtils.randomString());
-        credentials.setUsername(name);
+    public static SCCCredentials createSecondarySCCCredentials(String name, User user) {
+        SCCCredentials credentials = CredentialsFactory.createSCCCredentials(name, TestUtils.randomString());
         credentials.setUser(user);
         CredentialsFactory.storeCredentials(credentials);
         return credentials;
