@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2024 SUSE LLC
  * Copyright (c) 2009--2017 Red Hat, Inc.
  *
  * This software is licensed to you under the GNU General Public License,
@@ -14,14 +15,16 @@
  */
 package com.redhat.rhn.frontend.xmlrpc.system;
 
+import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 import static java.util.Optional.empty;
 import static java.util.Optional.of;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 import com.redhat.rhn.FaultException;
+import com.redhat.rhn.GlobalInstanceHolder;
 import com.redhat.rhn.common.client.ClientCertificate;
+import com.redhat.rhn.common.conf.Config;
 import com.redhat.rhn.common.conf.ConfigDefaults;
 import com.redhat.rhn.common.db.datasource.DataResult;
 import com.redhat.rhn.common.db.datasource.Row;
@@ -34,6 +37,7 @@ import com.redhat.rhn.common.validator.ValidatorResult;
 import com.redhat.rhn.domain.action.Action;
 import com.redhat.rhn.domain.action.ActionFactory;
 import com.redhat.rhn.domain.action.ActionType;
+import com.redhat.rhn.domain.action.CoCoAttestationAction;
 import com.redhat.rhn.domain.action.salt.ApplyStatesActionDetails;
 import com.redhat.rhn.domain.action.salt.ApplyStatesActionResult;
 import com.redhat.rhn.domain.action.salt.StateResult;
@@ -42,8 +46,6 @@ import com.redhat.rhn.domain.action.script.ScriptActionDetails;
 import com.redhat.rhn.domain.action.script.ScriptResult;
 import com.redhat.rhn.domain.action.script.ScriptRunAction;
 import com.redhat.rhn.domain.action.server.ServerAction;
-import com.redhat.rhn.domain.action.virtualization.VirtualizationSetMemoryGuestAction;
-import com.redhat.rhn.domain.action.virtualization.VirtualizationSetVcpusGuestAction;
 import com.redhat.rhn.domain.channel.Channel;
 import com.redhat.rhn.domain.channel.ChannelArch;
 import com.redhat.rhn.domain.channel.ChannelFactory;
@@ -81,6 +83,7 @@ import com.redhat.rhn.domain.server.MinionServer;
 import com.redhat.rhn.domain.server.MinionServerFactory;
 import com.redhat.rhn.domain.server.NetworkInterface;
 import com.redhat.rhn.domain.server.Note;
+import com.redhat.rhn.domain.server.Pillar;
 import com.redhat.rhn.domain.server.PushClient;
 import com.redhat.rhn.domain.server.Server;
 import com.redhat.rhn.domain.server.ServerFQDN;
@@ -96,7 +99,7 @@ import com.redhat.rhn.domain.state.VersionConstraints;
 import com.redhat.rhn.domain.token.ActivationKey;
 import com.redhat.rhn.domain.token.ActivationKeyFactory;
 import com.redhat.rhn.domain.user.User;
-import com.redhat.rhn.frontend.context.Context;
+import com.redhat.rhn.frontend.action.kickstart.KickstartHelper;
 import com.redhat.rhn.frontend.dto.ActivationKeyDto;
 import com.redhat.rhn.frontend.dto.ErrataOverview;
 import com.redhat.rhn.frontend.dto.EssentialChannelDto;
@@ -112,6 +115,7 @@ import com.redhat.rhn.frontend.dto.SystemOverview;
 import com.redhat.rhn.frontend.dto.VirtualSystemOverview;
 import com.redhat.rhn.frontend.events.SsmDeleteServersEvent;
 import com.redhat.rhn.frontend.xmlrpc.BaseHandler;
+import com.redhat.rhn.frontend.xmlrpc.EntityNotExistsFaultException;
 import com.redhat.rhn.frontend.xmlrpc.InvalidActionTypeException;
 import com.redhat.rhn.frontend.xmlrpc.InvalidChannelException;
 import com.redhat.rhn.frontend.xmlrpc.InvalidChannelLabelException;
@@ -120,6 +124,7 @@ import com.redhat.rhn.frontend.xmlrpc.InvalidEntitlementException;
 import com.redhat.rhn.frontend.xmlrpc.InvalidPackageArchException;
 import com.redhat.rhn.frontend.xmlrpc.InvalidPackageException;
 import com.redhat.rhn.frontend.xmlrpc.InvalidParameterException;
+import com.redhat.rhn.frontend.xmlrpc.InvalidParentChannelException;
 import com.redhat.rhn.frontend.xmlrpc.InvalidProfileLabelException;
 import com.redhat.rhn.frontend.xmlrpc.InvalidSystemException;
 import com.redhat.rhn.frontend.xmlrpc.MethodInvalidParamException;
@@ -159,6 +164,7 @@ import com.redhat.rhn.manager.action.ActionManager;
 import com.redhat.rhn.manager.channel.ChannelManager;
 import com.redhat.rhn.manager.distupgrade.DistUpgradeException;
 import com.redhat.rhn.manager.distupgrade.DistUpgradeManager;
+import com.redhat.rhn.manager.distupgrade.DistUpgradePaygException;
 import com.redhat.rhn.manager.entitlement.EntitlementManager;
 import com.redhat.rhn.manager.errata.ErrataManager;
 import com.redhat.rhn.manager.kickstart.KickstartFormatter;
@@ -175,17 +181,20 @@ import com.redhat.rhn.manager.system.DuplicateSystemGrouping;
 import com.redhat.rhn.manager.system.ServerGroupManager;
 import com.redhat.rhn.manager.system.SystemManager;
 import com.redhat.rhn.manager.system.SystemsExistException;
-import com.redhat.rhn.manager.system.UpdateBaseChannelCommand;
-import com.redhat.rhn.manager.system.UpdateChildChannelsCommand;
 import com.redhat.rhn.manager.system.entitling.SystemEntitlementManager;
 import com.redhat.rhn.manager.token.ActivationKeyManager;
 import com.redhat.rhn.taskomatic.TaskomaticApi;
 
+import com.suse.cloud.CloudPaygManager;
 import com.suse.manager.api.ApiIgnore;
+import com.suse.manager.api.ApiType;
 import com.suse.manager.api.ReadOnly;
-import com.suse.manager.virtualization.VirtualizationActionHelper;
-import com.suse.manager.webui.controllers.virtualization.gson.VirtualGuestSetterActionJson;
-import com.suse.manager.webui.controllers.virtualization.gson.VirtualGuestsBaseActionJson;
+import com.suse.manager.attestation.AttestationDisabledException;
+import com.suse.manager.attestation.AttestationManager;
+import com.suse.manager.model.attestation.CoCoAttestationResult;
+import com.suse.manager.model.attestation.CoCoEnvironmentType;
+import com.suse.manager.model.attestation.ServerCoCoAttestationConfig;
+import com.suse.manager.model.attestation.ServerCoCoAttestationReport;
 import com.suse.manager.webui.services.pillar.MinionPillarManager;
 import com.suse.manager.webui.utils.gson.BootstrapParameters;
 import com.suse.manager.xmlrpc.NoSuchHistoryEventException;
@@ -201,8 +210,6 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.IOException;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
@@ -225,6 +232,8 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
+import javax.servlet.http.HttpServletRequest;
+
 /**
  * SystemHandler
  * @apidoc.namespace system
@@ -239,24 +248,36 @@ public class SystemHandler extends BaseHandler {
     private SystemEntitlementManager systemEntitlementManager;
     private SystemManager systemManager;
     private final ServerGroupManager serverGroupManager;
+    private CloudPaygManager cloudPaygManager;
+    private AttestationManager attestationManager;
 
     /**
      * Instantiates a new system handler.
      *
-     * @param taskomaticApiIn the taskomatic api
-     * @param xmlRpcSystemHelperIn the xml rpc system helper
+     * @param taskomaticApiIn            the taskomatic api
+     * @param xmlRpcSystemHelperIn       the xml rpc system helper
      * @param systemEntitlementManagerIn the system entitlement manager
-     * @param systemManagerIn the system manager
+     * @param systemManagerIn            the system manager
      * @param serverGroupManagerIn
+     * @param cloudPaygManagerIn         the PAYG manager. If null, the one from GlobalInstanceHolder is used.
+     * @param attestationManagerIn       the attestation manager
      */
     public SystemHandler(TaskomaticApi taskomaticApiIn, XmlRpcSystemHelper xmlRpcSystemHelperIn,
-            SystemEntitlementManager systemEntitlementManagerIn,
-            SystemManager systemManagerIn, ServerGroupManager serverGroupManagerIn) {
+                         SystemEntitlementManager systemEntitlementManagerIn,
+                         SystemManager systemManagerIn, ServerGroupManager serverGroupManagerIn,
+                         CloudPaygManager cloudPaygManagerIn, AttestationManager attestationManagerIn) {
         this.taskomaticApi = taskomaticApiIn;
         this.xmlRpcSystemHelper = xmlRpcSystemHelperIn;
         this.systemEntitlementManager = systemEntitlementManagerIn;
         this.systemManager = systemManagerIn;
         this.serverGroupManager = serverGroupManagerIn;
+        if (cloudPaygManagerIn == null) {
+            this.cloudPaygManager = GlobalInstanceHolder.PAYG_MANAGER;
+        }
+        else {
+            this.cloudPaygManager = cloudPaygManagerIn;
+        }
+        this.attestationManager = attestationManagerIn;
     }
 
     /**
@@ -377,7 +398,7 @@ public class SystemHandler extends BaseHandler {
      * @throws FaultException A FaultException is thrown if:
      *   - the server corresponding to sid cannot be found.
      *   - the channel corresponding to cid is not a valid child channel.
-     *   - the user doesn't have subscribe access to any one of the current or
+     *   - the user doesn't have subscribed access to any one of the current or
      *     new child channels.
      * @deprecated being replaced by system.scheduleChangeChannels(string sessionKey,
      * int serverId, String baseChannelLabel, array_single channelLabels, date earliestOccurrence).
@@ -396,12 +417,12 @@ public class SystemHandler extends BaseHandler {
      * @apidoc.returntype #return_int_success()
      */
     @Deprecated
-    public int setChildChannels(User loggedInUser, Integer sid,
-            List channelIdsOrLabels)
-                    throws FaultException {
+    public int setChildChannels(User loggedInUser, Integer sid, List channelIdsOrLabels) throws FaultException {
 
         //Get the logged in user and server
         Server server = lookupServer(loggedInUser, sid);
+        List<String> channelLabels = new ArrayList<>();
+        String baseChannel = "";
 
         // Determine if user passed in a list of channel ids or labels... note: the list
         // must contain all ids or labels (i.e. not a combination of both)
@@ -409,6 +430,21 @@ public class SystemHandler extends BaseHandler {
         if (!channelIdsOrLabels.isEmpty()) {
             if (channelIdsOrLabels.get(0) instanceof String) {
                 receivedLabels = true;
+                Channel channel = ChannelFactory.lookupByLabel((String) channelIdsOrLabels.get(0));
+                if (channel == null) {
+                    throw new InvalidChannelLabelException();
+                }
+                if (channel.getParentChannel() == null) {
+                    throw new InvalidChannelException();
+                }
+                baseChannel = channel.getParentChannel().getLabel();
+            }
+            else {
+                Channel channel = ChannelFactory.lookupById(Long.valueOf((Integer) channelIdsOrLabels.get(0)));
+                if (channel == null || channel.getParentChannel() == null) {
+                    throw new InvalidChannelException();
+                }
+                baseChannel = channel.getParentChannel().getLabel();
             }
 
             // check to make sure that the objects are all the same type
@@ -417,80 +453,22 @@ public class SystemHandler extends BaseHandler {
                     if (!(object instanceof String)) {
                         throw new InvalidChannelListException();
                     }
+                    channelLabels.add((String) object);
                 }
                 else {
                     if (!(object instanceof Integer)) {
                         throw new InvalidChannelListException();
                     }
+                    channelLabels.add(ChannelFactory.lookupById(Long.valueOf((Integer) object)).getLabel());
                 }
             }
         }
 
-        List<Long> channelIds = new ArrayList<>();
-        if (receivedLabels) {
-            channelIds = ChannelFactory.getChannelIds(channelIdsOrLabels);
-
-            // if we weren't able to retrieve channel ids for all labels provided,
-            // one or more of the labels must be invalid...
-            if (channelIds.size() != channelIdsOrLabels.size()) {
-                throw new InvalidChannelLabelException();
-            }
-        }
-        else {
-            // unfortunately, the interface only allows Integer input (not Long);
-            // therefore, convert the input to Long, since channel ids are
-            // internally represented as Long
-            for (Object channelId : channelIdsOrLabels) {
-                channelIds.add(Long.valueOf((Integer) channelId));
-            }
-        }
-
-        UpdateChildChannelsCommand cmd = new UpdateChildChannelsCommand(loggedInUser,
-                server, channelIds);
-        cmd.setScheduleApplyChannelsState(true);
-        cmd.store();
+        scheduleChangeChannels(loggedInUser, sid, baseChannel, channelLabels, new Date());
 
         SystemManager.snapshotServer(server, LocalizationService
                 .getInstance().getMessage("snapshots.childchannel"));
 
-        return 1;
-    }
-
-    /**
-     * Sets the base channel for the given server to the given channel
-     * @param loggedInUser The current user
-     * @param sid The id for the server
-     * @param cid The id for the channel
-     * @return Returns 1 if successful, exception otherwise
-     * @throws FaultException A FaultException is thrown if:
-     *   - the server corresponding to sid cannot be found.
-     *   - the channel corresponding to cid is not a base channel.
-     *   - the user doesn't have subscribe access to either the current or
-     *     the new base channel.
-     * @deprecated being replaced by system.setBaseChannel(string sessionKey,
-     * int serverId, string channelLabel)
-     *
-     * @apidoc.doc Assigns the server to a new baseChannel.
-     * @apidoc.param #session_key()
-     * @apidoc.param #param("int", "sid")
-     * @apidoc.param #param_desc("int", "cid", "channel ID")
-     * @apidoc.returntype #return_int_success()
-     */
-    @Deprecated
-    public int setBaseChannel(User loggedInUser, Integer sid, Integer cid)
-            throws FaultException {
-        //Get the logged in user and server
-        Server server = lookupServer(loggedInUser, sid);
-        UpdateBaseChannelCommand cmd =
-                new UpdateBaseChannelCommand(
-                        loggedInUser, server, cid.longValue());
-        cmd.setScheduleApplyChannelsState(true);
-        ValidatorError ve = cmd.store();
-        if (ve != null) {
-            throw new InvalidChannelException(
-                    LocalizationService.getInstance()
-                    .getMessage(ve.getKey(), ve.getValues()));
-        }
         return 1;
     }
 
@@ -503,10 +481,11 @@ public class SystemHandler extends BaseHandler {
      * @throws FaultException A FaultException is thrown if:
      *   - the server corresponding to sid cannot be found.
      *   - the channel corresponding to cid is not a base channel.
-     *   - the user doesn't have subscribe access to either the current or
+     *   - the user doesn't have subscribed access to either the current or
      *     the new base channel.
      * @deprecated being replaced by system.scheduleChangeChannels(string sessionKey,
      * int serverId, String baseChannelLabel, array_single channelLabels, date earliestOccurrence).
+     * Internally it is already implemented using scheduleChangeChannels
      *
      *
      * @apidoc.doc Assigns the server to a new base channel.  If the user provides an empty
@@ -522,31 +501,8 @@ public class SystemHandler extends BaseHandler {
             throws FaultException {
         Server server = lookupServer(loggedInUser, sid);
 
-        UpdateBaseChannelCommand cmd = null;
-        if (StringUtils.isEmpty(channelLabel)) {
-            // if user provides an empty string for the channel label, they are requesting
-            // to remove the base channel
-            cmd = new UpdateBaseChannelCommand(loggedInUser, server, -1L);
-        }
-        else {
-            List<String> channelLabels = new ArrayList<>();
-            channelLabels.add(channelLabel);
+        scheduleChangeChannels(loggedInUser, sid, channelLabel, emptyList(), new Date());
 
-            List<Long> channelIds = ChannelFactory.getChannelIds(channelLabels);
-
-            if (!channelIds.isEmpty()) {
-                cmd = new UpdateBaseChannelCommand(loggedInUser, server, channelIds.get(0));
-                cmd.setScheduleApplyChannelsState(true);
-            }
-            else {
-                throw new InvalidChannelLabelException();
-            }
-        }
-        ValidatorError ve = cmd.store();
-        if (ve != null) {
-            throw new InvalidChannelException(LocalizationService.getInstance()
-                    .getMessage(ve.getKey(), ve.getValues()));
-        }
         SystemManager.snapshotServer(server, LocalizationService
                 .getInstance().getMessage("snapshots.basechannel"));
         return 1;
@@ -601,8 +557,15 @@ public class SystemHandler extends BaseHandler {
      * @apidoc.doc Schedule an action to change the channels of the given system. Works for both traditional
      * and Salt systems.
      * This method accepts labels for the base and child channels.
-     * If the user provides an empty string for the channelLabel, the current base channel and
-     * all child channels will be removed from the system.
+     * If the user provides an empty string for the baseChannelLabel and an empty list for the childLabels,
+     * the current base channel and all child channels will be removed from the system.
+     * If the user provides only a different baseChannelLabel and an empty list for childLabels,
+     * the new base channel is assigned to the system and we search for compatible child channels for the assigned one.
+     * If the base channel stay empty, all the child channels from the list should be compatible with the currently
+     * assigned base channel. The currently assigned child channels are exchanged with the channels provided in
+     * the childLabels list.
+     * When both baseChannelLabel and childLabels are provided, the compatibility is checked, and the system
+     * gets these new set of channels assigned.
      *
      * @apidoc.param #session_key()
      * @apidoc.param #array_single("int", "sids")
@@ -613,11 +576,6 @@ public class SystemHandler extends BaseHandler {
      */
     public List<Long> scheduleChangeChannels(User loggedInUser, List<Integer> sids, String baseChannelLabel,
                                              List childLabels, Date earliestOccurrence) {
-        //Get the logged in user and server
-        Set<Long> servers = sids.stream()
-                .map(sid -> lookupServer(loggedInUser, sid))
-                .map(Server::getId)
-                .collect(toSet());
         Optional<Channel> baseChannel = Optional.empty();
 
         // base channel
@@ -625,9 +583,29 @@ public class SystemHandler extends BaseHandler {
             List<Long> channelIds = ChannelFactory.getChannelIds(singletonList(baseChannelLabel));
             long baseChannelId = channelIds.stream().findFirst().orElseThrow(InvalidChannelLabelException::new);
             baseChannel = Optional.of(ChannelManager.lookupByIdAndUser(baseChannelId, loggedInUser));
+            if (baseChannel.filter(Channel::isBaseChannel).isEmpty()) {
+                throw new InvalidChannelException();
+            }
         }
         // else if the user provides an empty string for the channel label, they are requesting
         // to remove the base channel
+
+        //Get the logged in user and server
+        Set<Server> servers = sids.stream()
+                .map(sid -> lookupServer(loggedInUser, sid))
+                .collect(toSet());
+
+        for (Server s : servers) {
+            if (baseChannel.isPresent() && baseChannel.map(Channel::getChannelArch)
+                    .filter(arch -> arch.isCompatible(s.getServerArch()))
+                    .isEmpty()) {
+                throw new InvalidChannelException();
+            }
+        }
+
+        Set<Long> serverIds = servers.stream()
+                .map(Server::getId)
+                .collect(toSet());
 
         // check if user passed a list of labels for the child channels
         if (childLabels.stream().anyMatch(e -> !(e instanceof String))) {
@@ -645,15 +623,28 @@ public class SystemHandler extends BaseHandler {
 
         List<Channel> childChannels = channelIds.stream()
                 .map(cid -> ChannelFactory.lookupByIdAndUser(cid, loggedInUser))
-                .collect(Collectors.toList());
+                .toList();
+
+        // consistent check
+        long bid = baseChannel.map(Channel::getId).orElse(-1L);
+        for (Server s : servers) {
+            if (bid == -1L) {
+                bid = s.getBaseChannel().getId();
+            }
+            for (Channel cch : childChannels) {
+                if (!cch.getParentChannel().getId().equals(bid)) {
+                    throw new InvalidParentChannelException();
+                }
+            }
+        }
 
         try {
             Set<Action> action = ActionChainManager.scheduleSubscribeChannelsAction(loggedInUser,
-                    servers,
+                    serverIds,
                     baseChannel,
                     childChannels,
                     earliestOccurrence, null);
-            return action.stream().map(Action::getId).collect(toList());
+            return action.stream().map(Action::getId).toList();
         }
         catch (com.redhat.rhn.taskomatic.TaskomaticApiException e) {
             throw new TaskomaticApiException(e.getMessage());
@@ -694,8 +685,7 @@ public class SystemHandler extends BaseHandler {
         Channel baseChannel = server.getBaseChannel();
         List<Map<String, Object>> returnList = new ArrayList<>();
 
-        List<EssentialChannelDto> list =
-                ChannelManager.listBaseChannelsForSystem(loggedInUser, server);
+        List<EssentialChannelDto> list = ChannelManager.listBaseChannelsForSystem(loggedInUser, server);
         for (EssentialChannelDto ch : list) {
             Boolean currentBase = (baseChannel != null) &&
                     baseChannel.getId().equals(ch.getId());
@@ -802,6 +792,7 @@ public class SystemHandler extends BaseHandler {
      *     #struct_begin("server details")
      *       #prop_desc("int", "id", "The server's id")
      *       #prop_desc("string", "name", "The server's name")
+     *       #prop_desc("boolean", "payg", "Whether the server instance is payg or not")
      *       #prop_desc("string", "minion_id", "The server's minion id, in case it is a salt minion client")
      *       #prop_desc("$date", "last_checkin",
      *         "Last time server successfully checked in (in UTC)")
@@ -870,6 +861,8 @@ public class SystemHandler extends BaseHandler {
                     }
                 }
                 m.put("subscribed_channels", channels);
+
+                m.put("payg", server.isPayg());
 
                 Collection<VirtualInstance> guests = server.getGuests();
                 List<Long> guestList = new ArrayList<>();
@@ -1006,15 +999,14 @@ public class SystemHandler extends BaseHandler {
                 server.getPackageType()
         );
 
-        List toCheck = packagesToCheck(server, name);
+        List<Map<String, Object>> toCheck = packagesToCheck(server, name);
 
-        List returnList = new ArrayList<>();
+        List<Map<String, String>> returnList = new ArrayList<>();
         /*
          * Loop through the packages to check and compare the evr parts to what was
          * passed in from the user. If the package is older, add it to returnList.
          */
-        for (Object oIn : toCheck) {
-            Map pkg = (Map) oIn;
+        for (Map<String, Object> pkg : toCheck) {
 
             String pkgName = (String) pkg.get("name");
             String pkgVersion = (String) pkg.get("version");
@@ -1083,14 +1075,13 @@ public class SystemHandler extends BaseHandler {
                 server.getPackageType()
         );
 
-        List toCheck = packagesToCheck(server, name);
-        List returnList = new ArrayList<>();
-        /*
-         * Loop through the packages to check and compare the evr parts to what was
-         * passed in from the user. If the package is newer, add it to returnList.
-         */
-        for (Object oIn : toCheck) {
-            Map pkg = (Map) oIn;
+        List<Map<String, Object>> toCheck = packagesToCheck(server, name);
+        List<Map<String, String>> returnList = new ArrayList<>();
+    /*
+     * Loop through the packages to check and compare the evr parts to what was
+     * passed in from the user. If the package is newer, add it to returnList.
+     */
+        for (Map<String, Object> pkg : toCheck) {
             String pkgName = (String) pkg.get("name");
             String pkgVersion = (String) pkg.get("version");
             String pkgRelease = (String) pkg.get("release");
@@ -1560,7 +1551,7 @@ public class SystemHandler extends BaseHandler {
         Server server = lookupServer(loggedInUser, sid);
         DataResult<PackageListItem> packageListItems = PackageManager.systemPackageList(server.getId(), null);
         packageListItems.elaborate();
-        List<Map<String, Object>> maps = packageListItems.stream().map(pi -> {
+        return packageListItems.stream().map(pi -> {
             Map<String, Object> item = new LinkedHashMap<>();
             item.put("package_id", Objects.isNull(pi.getPackageId()) ? -1 : pi.getPackageId().intValue());
             item.put("name", pi.getName());
@@ -1572,8 +1563,7 @@ public class SystemHandler extends BaseHandler {
             Optional.ofNullable(pi.getInstallTimeObj()).ifPresent(it -> item.put("installtime", it));
             item.put("retracted", pi.isRetracted());
             return item;
-        }).collect(toList());
-        return maps;
+        }).toList();
     }
 
     /**
@@ -1619,7 +1609,7 @@ public class SystemHandler extends BaseHandler {
                 item.put("pending status", pi.getPending().equals("L") ? "Locking" : "Unlocking");
             }
             return item;
-        }).collect(toList());
+        }).toList();
     }
 
     /**
@@ -2535,9 +2525,8 @@ public class SystemHandler extends BaseHandler {
         else if (type.equals(ActionFactory.TYPE_ERRATA)) {
 
             // retrieve the errata that were associated with the action...
-            DataResult errata = ActionManager.getErrataList(action.getId());
-            for (Object erratumIn : errata) {
-                Map erratum = (Map) erratumIn;
+            DataResult<Row> errata = ActionManager.getErrataList(action.getId());
+            for (Row erratum : errata) {
                 String detail = (String) erratum.get("advisory");
                 detail += " (" + erratum.get("synopsis") + ")";
 
@@ -2550,10 +2539,8 @@ public class SystemHandler extends BaseHandler {
                 type.equals(ActionFactory.TYPE_CONFIGFILES_MTIME_UPLOAD)) {
 
             // retrieve the details associated with the action...
-            DataResult files = ActionManager.getConfigFileUploadList(action.getId());
-            for (Object fileIn : files) {
-                Map file = (Map) fileIn;
-
+            DataResult<Row> files = ActionManager.getConfigFileUploadList(action.getId());
+            for (Row file : files) {
                 Map<String, String> info = new HashMap<>();
                 info.put("detail", (String) file.get("path"));
                 String error = (String) file.get("failure_reason");
@@ -2566,10 +2553,8 @@ public class SystemHandler extends BaseHandler {
         else if (type.equals(ActionFactory.TYPE_CONFIGFILES_DEPLOY)) {
 
             // retrieve the details associated with the action...
-            DataResult files = ActionManager.getConfigFileDeployList(action.getId());
-            for (Object fileIn : files) {
-                Map file = (Map) fileIn;
-
+            DataResult<Row> files = ActionManager.getConfigFileDeployList(action.getId());
+            for (Row file : files) {
                 Map<String, String> info = new HashMap<>();
                 String path = (String) file.get("path");
                 path += " (rev. " + file.get("revision") + ")";
@@ -2584,10 +2569,8 @@ public class SystemHandler extends BaseHandler {
         else if (type.equals(ActionFactory.TYPE_CONFIGFILES_DIFF)) {
 
             // retrieve the details associated with the action...
-            DataResult files = ActionManager.getConfigFileDiffList(action.getId());
-            for (Object fileIn : files) {
-                Map file = (Map) fileIn;
-
+            DataResult<Row> files = ActionManager.getConfigFileDiffList(action.getId());
+            for (Row file : files) {
                 Map<String, String> info = new HashMap<>();
                 String path = (String) file.get("path");
                 path += " (rev. " + file.get("revision") + ")";
@@ -2890,7 +2873,7 @@ public class SystemHandler extends BaseHandler {
      * @param loggedInUser The current user
      * @param sid of the system to be provisioned
      * @param profileName of Profile to be used.
-     * @return Returns 1 if successful, exception otherwise
+     * @return Returns id of the action if successful, exception otherwise
      * @throws FaultException A FaultException is thrown if the server corresponding to
      * id cannot be found or profile is not found.
      *
@@ -2901,37 +2884,90 @@ public class SystemHandler extends BaseHandler {
      * @apidoc.returntype #param_desc("int", "id", "ID of the action scheduled, otherwise exception thrown
      * on error")
      */
+    @ApiIgnore(ApiType.HTTP)
     public int provisionSystem(User loggedInUser, Integer sid, String profileName)
             throws FaultException {
-        log.debug("provisionSystem called.");
+       return provisionSystem(
+               loggedInUser, RhnXmlRpcServer.getRequest(), sid, null, profileName, new Date(), new HashMap<>()
+       );
+    }
 
-        // Lookup the server so we can validate it exists and throw error if not.
-        Server server = lookupServer(loggedInUser, sid);
-        if (server.hasEntitlement(EntitlementManager.FOREIGN)) {
-            throw new FaultException(-2, "provisionError",
-                    "System does not have required entitlement");
-        }
+    /**
+     * Provision a system using the specified kickstart/autoinstallation profile.
+     *
+     * @param loggedInUser The current user
+     * @param request the spark request
+     * @param sid of the system to be provisioned
+     * @param profileName of Profile to be used.
+     * @return Returns id of the action if successful, exception otherwise
+     * @throws FaultException A FaultException is thrown if the server corresponding to
+     * id cannot be found or profile is not found.
+     *
+     * @apidoc.doc Provision a system using the specified kickstart/autoinstallation profile.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid", "ID of the system to be provisioned.")
+     * @apidoc.param #param_desc("string", "profileName", "Profile to use.")
+     * @apidoc.returntype #param_desc("int", "id", "ID of the action scheduled, otherwise exception thrown
+     * on error")
+     */
+    @ApiIgnore(ApiType.XMLRPC)
+    public int provisionSystem(User loggedInUser, HttpServletRequest request, Integer sid, String profileName)
+            throws FaultException {
+        return provisionSystem(loggedInUser, request, sid, null, profileName, new Date(), new HashMap<>());
+    }
 
-        KickstartData ksdata = KickstartFactory.
-                lookupKickstartDataByLabelAndOrgId(profileName,
-                        loggedInUser.getOrg().getId());
-        if (ksdata == null) {
-            throw new FaultException(-3, "kickstartProfileNotFound",
-                    "No Kickstart Profile found with label: " + profileName);
-        }
+    /**
+     * Provision a system using the specified kickstart/autoinstallation profile.
+     *
+     * @param loggedInUser The current user
+     * @param sid of the system to be provisioned
+     * @param proxy ID of the proxy to use
+     * @param profileName of Profile to be used
+     * @return Returns id of the action if successful, exception otherwise
+     * @throws FaultException A FaultException is thrown if the server corresponding to
+     * id cannot be found or profile is not found.
+     *
+     * @apidoc.doc Provision a system using the specified kickstart/autoinstallation profile.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid", "ID of the system to be provisioned.")
+     * @apidoc.param #param_desc("int", "proxy", "ID of the proxy to use.")
+     * @apidoc.param #param_desc("string", "profileName", "Profile to use.")
+     * @apidoc.returntype #param_desc("int", "id", "ID of the action scheduled, otherwise exception thrown
+     * on error")
+     */
+    @ApiIgnore(ApiType.HTTP)
+    public int provisionSystem(User loggedInUser, Integer sid, Integer proxy, String profileName)
+            throws FaultException {
+        return provisionSystem(
+                loggedInUser, RhnXmlRpcServer.getRequest(), sid, proxy, profileName, new Date(), new HashMap<>()
+        );
+    }
 
-        String host = RhnXmlRpcServer.getServerName();
-
-
-        KickstartScheduleCommand cmd = new KickstartScheduleCommand(
-                Long.valueOf(sid),
-                ksdata.getId(), loggedInUser, new Date(), host);
-        ValidatorError ve = cmd.store();
-        if (ve != null) {
-            throw new FaultException(-2, "provisionError",
-                    LocalizationService.getInstance().getMessage(ve.getKey()));
-        }
-        return cmd.getScheduledAction().getId().intValue();
+    /**
+     * Provision a system using the specified kickstart/autoinstallation profile.
+     *
+     * @param loggedInUser The current user
+     * @param request the spark request
+     * @param sid of the system to be provisioned
+     * @param proxy ID of the proxy to use
+     * @param profileName of Profile to be used.
+     * @return Returns id of the action if successful, exception otherwise
+     * @throws FaultException A FaultException is thrown if the server corresponding to
+     * id cannot be found or profile is not found.
+     *
+     * @apidoc.doc Provision a system using the specified kickstart/autoinstallation profile.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid", "ID of the system to be provisioned.")
+     * @apidoc.param #param_desc("int", "proxy", "ID of the proxy to use.")
+     * @apidoc.param #param_desc("string", "profileName", "Profile to use.")
+     * @apidoc.returntype #param_desc("int", "id", "ID of the action scheduled, otherwise exception thrown
+     * on error")
+     */
+    @ApiIgnore(ApiType.XMLRPC)
+    public int provisionSystem(User loggedInUser, HttpServletRequest request, Integer sid, Integer proxy,
+                               String profileName)
+            throws FaultException {
+        return provisionSystem(loggedInUser, request, sid, proxy, profileName, new Date(), new HashMap<>());
     }
 
     /**
@@ -2941,7 +2977,7 @@ public class SystemHandler extends BaseHandler {
      * @param sid of the system to be provisioned
      * @param profileName of Profile to be used.
      * @param earliestDate when the autoinstallation needs to be scheduled
-     * @return Returns 1 if successful, exception otherwise
+     * @return Returns id of the action if successful, exception otherwise
      * @throws FaultException A FaultException is thrown if the server corresponding to
      * id cannot be found or profile is not found.
      *
@@ -2953,9 +2989,167 @@ public class SystemHandler extends BaseHandler {
      * @apidoc.returntype #param_desc("int", "id", "ID of the action scheduled, otherwise exception thrown
      * on error")
      */
+    @ApiIgnore(ApiType.HTTP)
     public int provisionSystem(User loggedInUser, Integer sid,
             String profileName, Date earliestDate)
                     throws FaultException {
+        return provisionSystem(
+                loggedInUser, RhnXmlRpcServer.getRequest(), sid, null, profileName, earliestDate, new HashMap<>()
+        );
+    }
+
+    /**
+     * Provision a system using the specified kickstart/autoinstallation profile at specified time.
+     *
+     * @param loggedInUser The current user
+     * @param request the request
+     * @param sid of the system to be provisioned
+     * @param profileName of Profile to be used.
+     * @param earliestDate when the autoinstallation needs to be scheduled
+     * @return Returns id of the action if successful, exception otherwise
+     * @throws FaultException A FaultException is thrown if the server corresponding to
+     * id cannot be found or profile is not found.
+     *
+     * @apidoc.doc Provision a system using the specified kickstart/autoinstallation profile.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid", "ID of the system to be provisioned.")
+     * @apidoc.param #param_desc("string", "profileName", "Profile to use.")
+     * @apidoc.param #param("$date", "earliestDate")
+     * @apidoc.returntype #param_desc("int", "id", "ID of the action scheduled, otherwise exception thrown
+     * on error")
+     */
+    @ApiIgnore(ApiType.XMLRPC)
+    public int provisionSystem(User loggedInUser, HttpServletRequest request, Integer sid,
+                                String profileName, Date earliestDate)
+            throws FaultException {
+        return provisionSystem(loggedInUser, request , sid, null, profileName, earliestDate, new HashMap<>());
+    }
+
+    /**
+     * Provision a system using the specified kickstart/autoinstallation profile at specified time.
+     *
+     * @param loggedInUser The current user
+     * @param sid of the system to be provisioned
+     * @param proxy ID of the proxy to use
+     * @param profileName of Profile to be used.
+     * @param earliestDate when the autoinstallation needs to be scheduled
+     * @return Returns id of the action if successful, exception otherwise
+     * @throws FaultException A FaultException is thrown if the server corresponding to
+     * id cannot be found or profile is not found.
+     *
+     * @apidoc.doc Provision a system using the specified kickstart/autoinstallation profile.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid", "ID of the system to be provisioned.")
+     * @apidoc.param #param_desc("int", "proxy", "ID of the proxy to use.")
+     * @apidoc.param #param_desc("string", "profileName", "Profile to use.")
+     * @apidoc.param #param("$date", "earliestDate")
+     * @apidoc.returntype #param_desc("int", "id", "ID of the action scheduled, otherwise exception thrown
+     * on error")
+     */
+    @ApiIgnore(ApiType.HTTP)
+    public int provisionSystem(User loggedInUser, Integer sid,
+                               Integer proxy, String profileName, Date earliestDate)
+            throws FaultException {
+        HttpServletRequest request = RhnXmlRpcServer.getRequest();
+        return provisionSystem(loggedInUser, request, sid, proxy, profileName, earliestDate, new HashMap<>());
+    }
+
+    /**
+     * Provision a system using the specified kickstart/autoinstallation profile at specified time.
+     *
+     * @param loggedInUser The current user
+     * @param request the request
+     * @param sid of the system to be provisioned
+     * @param proxy ID of the proxy to use
+     * @param profileName of Profile to be used.
+     * @param earliestDate when the autoinstallation needs to be scheduled
+     * @return Returns id of the action if successful, exception otherwise
+     * @throws FaultException A FaultException is thrown if the server corresponding to
+     * id cannot be found or profile is not found.
+     *
+     * @apidoc.doc Provision a system using the specified kickstart/autoinstallation profile.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid", "ID of the system to be provisioned.")
+     * @apidoc.param #param_desc("int", "proxy", "ID of the proxy to use.")
+     * @apidoc.param #param_desc("string", "profileName", "Profile to use.")
+     * @apidoc.param #param("$date", "earliestDate")
+     * @apidoc.returntype #param_desc("int", "id", "ID of the action scheduled, otherwise exception thrown
+     * on error")
+     */
+    @ApiIgnore(ApiType.XMLRPC)
+    public int provisionSystem(User loggedInUser, HttpServletRequest request, Integer sid,
+                               Integer proxy, String profileName, Date earliestDate)
+        throws FaultException {
+        return provisionSystem(loggedInUser, request, sid, proxy, profileName, earliestDate, new HashMap<>());
+    }
+
+    /**
+     * Provision a system using the specified kickstart/autoinstallation profile at specified time.
+     *
+     * @param loggedInUser The current user
+     * @param sid of the system to be provisioned
+     * @param proxy ID of the proxy to use
+     * @param profileName of Profile to be used.
+     * @param earliestDate when the autoinstallation needs to be scheduled
+     * @param advancedOptions custom kernel or post kernel options
+     * @return Returns id of the action if successful, exception otherwise
+     * @throws FaultException A FaultException is thrown if the server corresponding to
+     * id cannot be found or profile is not found.
+     *
+     * @apidoc.doc Provision a system using the specified kickstart/autoinstallation profile.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid", "ID of the system to be provisioned.")
+     * @apidoc.param #param_desc("int", "proxy", "ID of the proxy to use.")
+     * @apidoc.param #param_desc("string", "profileName", "Profile to use.")
+     * @apidoc.param #param("$date", "earliestDate")
+     * @apidoc.param
+     *  #struct_begin("advancedOptions")
+     *      #prop_desc("string", "kernel_options", "custom kernel options")
+     *      #prop_desc("string", "post_kernel_options", "custom post kernel options")
+     *  #struct_end()
+     * @apidoc.returntype #param_desc("int", "id", "ID of the action scheduled, otherwise exception thrown
+     * on error")
+     */
+    @ApiIgnore(ApiType.HTTP)
+    public int provisionSystem(User loggedInUser, Integer sid, Integer proxy, String profileName,
+                               Date earliestDate, Map<String, String> advancedOptions)
+            throws FaultException {
+        HttpServletRequest request = RhnXmlRpcServer.getRequest();
+        return provisionSystem(loggedInUser, request, sid, proxy, profileName, earliestDate, advancedOptions);
+    }
+
+    /**
+     * Provision a system using the specified kickstart/autoinstallation profile at specified time.
+     *
+     * @param loggedInUser The current user
+     * @param request the request
+     * @param sid of the system to be provisioned
+     * @param proxy ID of the proxy to use
+     * @param profileName of Profile to be used.
+     * @param earliestDate when the autoinstallation needs to be scheduled
+     * @param advancedOptions custom kernel or post kernel options
+     * @return Returns id of the action if successful, exception otherwise
+     * @throws FaultException A FaultException is thrown if the server corresponding to
+     * id cannot be found or profile is not found.
+     *
+     * @apidoc.doc Provision a system using the specified kickstart/autoinstallation profile.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid", "ID of the system to be provisioned.")
+     * @apidoc.param #param_desc("int", "proxy", "ID of the proxy to use.")
+     * @apidoc.param #param_desc("string", "profileName", "Profile to use.")
+     * @apidoc.param #param("$date", "earliestDate")
+     * @apidoc.param
+     *  #struct_begin("advancedOptions")
+     *      #prop_desc("string", "kernel_options", "custom kernel options")
+     *      #prop_desc("string", "post_kernel_options", "custom post kernel options")
+     *  #struct_end()
+     * @apidoc.returntype #param_desc("int", "id", "ID of the action scheduled, otherwise exception thrown
+     * on error")
+     */
+    @ApiIgnore(ApiType.XMLRPC)
+    public int provisionSystem(User loggedInUser, HttpServletRequest request, Integer sid,
+            Integer proxy, String profileName, Date earliestDate, Map<String, String> advancedOptions)
+        throws FaultException {
         log.debug("provisionSystem called.");
 
         // Lookup the server so we can validate it exists and throw error if not.
@@ -2973,11 +3167,30 @@ public class SystemHandler extends BaseHandler {
                     "No Kickstart Profile found with label: " + profileName);
         }
 
-        String host = RhnXmlRpcServer.getServerName();
+        KickstartHelper helper = new KickstartHelper(request);
+        String host = helper.getKickstartHost();
 
         KickstartScheduleCommand cmd = new KickstartScheduleCommand(
                 Long.valueOf(sid),
                 ksdata.getId(), loggedInUser, earliestDate, host);
+        if (advancedOptions != null) {
+            if (advancedOptions.containsKey("kernel_options")) {
+                cmd.setKernelOptions(advancedOptions.get("kernel_options"));
+            }
+            if (advancedOptions.containsKey("post_kernel_options")) {
+                cmd.setPostKernelOptions(advancedOptions.get("post_kernel_options"));
+            }
+        }
+        if (proxy != null) {
+            Server proxyServer = SystemManager.lookupByIdAndOrg(Long.valueOf(proxy), loggedInUser.getOrg());
+            if (proxyServer == null) {
+                throw new FaultException(-2, "provisionError", "Requested proxy is not available");
+            }
+            if (!proxyServer.isProxy()) {
+                throw new FaultException(-2, "provisionError", "Requested proxy is not registered proxy");
+            }
+            cmd.setProxy(proxyServer);
+        }
         ValidatorError ve = cmd.store();
         if (ve != null) {
             throw new FaultException(-2, "provisionError",
@@ -3474,6 +3687,46 @@ public class SystemHandler extends BaseHandler {
     }
 
     /**
+     * Returns a list of all errata that are relevant to a list of systems.
+     *
+     * @param loggedInUser The current user
+     * @param sids The ids of the systems in question
+     * @return Returns an array of maps representing the errata that can be applied to
+     * each system
+     * @throws FaultException A FaultException is thrown if the server in the list
+     * cannot be found.
+     *
+     * @apidoc.doc Returns a list of all errata that are relevant to a list of systems.
+     * @apidoc.param #session_key()
+     * @apidoc.param #array_single("int", "sids")
+     * @apidoc.returntype
+     *      #return_array_begin()
+     *          #struct_begin("server_errata")
+     *              #prop_desc("string", "system_id", "The ID of the system")
+     *              #prop_array_begin_desc("errata", "An array of available errata infos")
+     *                  $ErrataOverviewSerializer
+     *              #prop_array_end()
+     *          #struct_end()
+     *      #array_end()
+     */
+    @ReadOnly
+    public List<Map<String, Object>> getRelevantErrata(User loggedInUser, List<Integer> sids) {
+        List<Map<String, Object>> result = new ArrayList<>();
+        List<Server> servers = this.xmlRpcSystemHelper.lookupServers(loggedInUser, sids);
+
+        for (Server server : servers) {
+          Map<String, Object> serverMap = new HashMap<>();
+          Long serverId = server.getId();
+          DataResult<ErrataOverview> serverResult = SystemManager.relevantErrata(loggedInUser, serverId);
+          serverMap.put("system_id", serverId.toString());
+          serverMap.put("errata", serverResult);
+          result.add(serverMap);
+        }
+
+        return result;
+    }
+
+    /**
      * Returns a list of all errata of the specified type that are relevant to the system.
      * @param loggedInUser The current user
      * @param sid serverId
@@ -3659,13 +3912,13 @@ public class SystemHandler extends BaseHandler {
         // we need long values to pass to ErrataManager.applyErrataHelper
         List<Long> serverIds = sids.stream()
             .map(Integer::longValue)
-            .collect(toList());
+            .toList();
 
         if (!allowModules) {
             for (Long sid : serverIds) {
                 Server server = SystemManager.lookupByIdAndUser(sid, loggedInUser);
                 for (Channel channel : server.getChannels()) {
-                    if (channel.isModular()) {
+                    if (channel.getModules() != null) {
                         throw new ModulesNotAllowedException();
                     }
                 }
@@ -3673,7 +3926,7 @@ public class SystemHandler extends BaseHandler {
         }
         List<Long> eids = errataIds.stream()
             .map(Integer::longValue)
-            .collect(toList());
+            .toList();
 
         try {
             return ErrataManager.applyErrataHelper(loggedInUser,
@@ -3974,7 +4227,7 @@ public class SystemHandler extends BaseHandler {
             for (Integer sid : sids) {
                 Server server = SystemManager.lookupByIdAndUser(sid.longValue(), loggedInUser);
                 for (Channel channel : server.getChannels()) {
-                    if (channel.isModular()) {
+                    if (channel.getModules() != null) {
                         hasModules = true;
                         break;
                     }
@@ -3992,20 +4245,20 @@ public class SystemHandler extends BaseHandler {
             Long archId = packageMap.get("arch_id");
 
             return PackageFactory.lookupByNevraIds(org, nameId, evrId, archId).stream();
-        }).collect(toList());
+        }).toList();
 
         if (ActionFactory.TYPE_PACKAGES_UPDATE.equals(acT)) {
             List<Tuple2<Long, Long>> pidsidpairs = ErrataFactory.retractedPackages(
-                    packages.stream().map(Package::getId).collect(toList()),
-                    sids.stream().map(Integer::longValue).collect(toList())
+                    packages.stream().map(Package::getId).toList(),
+                    sids.stream().map(Integer::longValue).toList()
             );
             if (!pidsidpairs.isEmpty()) {
-                throw new RetractedPackageFault(pidsidpairs.stream().map(Tuple2::getA).collect(toList()));
+                throw new RetractedPackageFault(pidsidpairs.stream().map(Tuple2::getA).toList());
             }
         }
 
         // Check if the package is part of a PTF. If true it cannot be manually installed/updated/ removed
-        List<Long> ptfPackages = packages.stream().filter(Package::isPartOfPtf).map(Package::getId).collect(toList());
+        List<Long> ptfPackages = packages.stream().filter(Package::isPartOfPtf).map(Package::getId).toList();
         if (!ptfPackages.isEmpty()) {
             throw new PtfPackageFault(ptfPackages);
         }
@@ -4015,7 +4268,7 @@ public class SystemHandler extends BaseHandler {
             List<Long> ptfMasterPackages = packages.stream()
                                                    .filter(Package::isMasterPtfPackage)
                                                    .map(Package::getId)
-                                                   .collect(toList());
+                                                   .toList();
             if (!ptfMasterPackages.isEmpty()) {
                 throw new PtfMasterFault(ptfMasterPackages);
             }
@@ -4066,8 +4319,13 @@ public class SystemHandler extends BaseHandler {
             Date earliestOccurrence, ActionType acT) {
         HashSet<Long> lsids = new HashSet<>();
         for (Integer sid : sids) {
-            Server server = SystemManager.lookupByIdAndUser(sid.longValue(),
-                    loggedInUser);
+            Server server;
+            try {
+                server = SystemManager.lookupByIdAndUser(sid.longValue(), loggedInUser);
+            }
+            catch (LookupException e) {
+                throw new NoSuchSystemException(e.getMessage());
+            }
 
             // Would be nice to do this check at the Manager layer but upset many tests,
             // some of which were not cooperative when being fixed. Placing here for now.
@@ -4230,12 +4488,12 @@ public class SystemHandler extends BaseHandler {
                                          List<Integer> packageIds, Date earliestOccurrence, Boolean allowModules) {
 
         List<Tuple2<Long, Long>> retracted = ErrataFactory.retractedPackages(
-                packageIds.stream().map(Integer::longValue).collect(toList()),
-                sids.stream().map(Integer::longValue).collect(toList()));
+                packageIds.stream().map(Integer::longValue).toList(),
+                sids.stream().map(Integer::longValue).toList());
 
         List<Long> retractedPids = retracted.stream()
                 .map(Tuple2::getA)
-                .collect(toList());
+                .toList();
         if (retracted.isEmpty()) {
             return schedulePackagesAction(loggedInUser, sids,
                     packageIdsToMaps(loggedInUser, packageIds), earliestOccurrence,
@@ -4257,7 +4515,7 @@ public class SystemHandler extends BaseHandler {
      *
      * @apidoc.doc Schedule full package update for several systems.
      * @apidoc.param #session_key()
-     * @apidoc.param #array_single("int", "serverId")
+     * @apidoc.param #array_single("int", "sids")
      * @apidoc.param #param("$date", "earliestOccurrence")
      * @apidoc.returntype #param("int", "actionId")
      */
@@ -4740,13 +4998,13 @@ public class SystemHandler extends BaseHandler {
         Set<Package> pkgsAlreadyLocked = new HashSet<>();
         List<Package> pkgsFindAlreadyLocked = PackageManager.lookupByIdAndUser(
                 lockedPackagesResult.stream().map(PackageListItem::getPackageId)
-                        .collect(Collectors.toList()), loggedInUser);
+                        .toList(), loggedInUser);
         pkgsAlreadyLocked.addAll(pkgsFindAlreadyLocked);
 
         Set<Package> pkgsToLock = new HashSet<>();
         List<Package> pkgsFindToLock = PackageManager.lookupByIdAndUser(pkgIdsToLock
 
-                .stream().map(Integer::longValue).collect(toList()), loggedInUser);
+                .stream().map(Integer::longValue).toList(), loggedInUser);
         pkgsFindToLock.stream().filter(Objects::nonNull).forEach(pkgsToLock::add);
 
         pkgsToLock.removeAll(pkgsAlreadyLocked);
@@ -4756,7 +5014,7 @@ public class SystemHandler extends BaseHandler {
 
         Set<Package> pkgsToUnlock = new HashSet<>();
         List<Package> pkgsFindToUnlock = PackageManager.lookupByIdAndUser(pkgIdsToUnlock
-                .stream().map(Integer::longValue).collect(toList()), loggedInUser);
+                .stream().map(Integer::longValue).toList(), loggedInUser);
         pkgsFindToUnlock.stream().filter(Objects::nonNull).forEach(pkgsToUnlock::add);
 
         pkgsToUnlock.forEach(x -> x.setLockPending(Boolean.TRUE));
@@ -4952,6 +5210,10 @@ public class SystemHandler extends BaseHandler {
             sids, String username, String groupname, Integer timeout, String script,
                                      Date earliestOccurrence) {
 
+        if (Config.get().getBoolean(ConfigDefaults.WEB_DISABLE_REMOTE_COMMANDS_FROM_UI)) {
+            throw new PermissionCheckFailureException("Running remote scripts has been disabled");
+        }
+
         ScriptActionDetails scriptDetails = ActionManager.createScript(username, groupname,
                 timeout.longValue(), script);
         ScriptAction action = null;
@@ -5095,6 +5357,119 @@ public class SystemHandler extends BaseHandler {
         return scheduleScriptRun(loggedInUser, label, systemIds, username, groupname,
                 timeout,
                 script, earliestOccurrence);
+    }
+
+    /**
+     * Schedule Confidential Compute Attestation Action
+     * @param loggedInUser the logged in user
+     * @param sid ID of the server to run the attestation for
+     * @param earliestOccurrence Earliest the script can run
+     * @return ID of the new script action
+     *
+     * @apidoc.doc Schedule Confidential Compute Attestation Action
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid",
+     * "ID of the server to run the script on.")
+     * @apidoc.param #param_desc("$date", "earliestOccurrence",
+     * "Earliest the script can run.")
+     * @apidoc.returntype #param_desc("int", "id", "ID of the script run action created. Can be used to fetch
+     * results with system.getScriptResults")
+     */
+    public Integer scheduleCoCoAttestation(User loggedInUser, Integer sid, Date earliestOccurrence) {
+        MinionServer minionServer = SystemManager.lookupByIdAndUser(sid.longValue(), loggedInUser)
+                .asMinionServer().orElseThrow(NoSuchSystemException::new);
+
+        if (!minionServer.doesOsSupportCoCoAttestation()) {
+            throw new UnsupportedOperationException("System does not support Confidential Computing attestation");
+        }
+
+        try {
+            CoCoAttestationAction action = attestationManager.scheduleAttestationAction(loggedInUser, minionServer,
+                    earliestOccurrence);
+            return action.getId().intValue();
+        }
+        catch (LookupException e) {
+            throw new EntityNotExistsFaultException(e);
+        }
+        catch (AttestationDisabledException e) {
+            throw new UnsupportedOperationException(e);
+        }
+        catch (com.redhat.rhn.taskomatic.TaskomaticApiException e) {
+            throw new TaskomaticApiException(e.getMessage());
+        }
+    }
+
+    /**
+     * Return the Confidential Compute Attestation configuration for the given system id
+     * @param loggedInUser the user
+     * @param sid the system id
+     * @return returns {@link com.suse.manager.model.attestation.ServerCoCoAttestationConfig} values
+     *
+     * @apidoc.doc Return the Confidential Compute Attestation configuration for the given system id
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid", "ID of the server to get the config for.")
+     * @apidoc.returntype $CoCoAttestationConfigSerializer
+     */
+    @ReadOnly
+    public ServerCoCoAttestationConfig getCoCoAttestationConfig(User loggedInUser, Integer sid) {
+        MinionServer minionServer = SystemManager.lookupByIdAndUser(sid.longValue(), loggedInUser).asMinionServer()
+                .orElseThrow(NoSuchSystemException::new);
+
+        if (!minionServer.doesOsSupportCoCoAttestation()) {
+            throw new UnsupportedOperationException("System does not support Confidential Computing attestation");
+        }
+
+        return minionServer.getOptCocoAttestationConfig()
+                .orElse(new ServerCoCoAttestationConfig(false, minionServer));
+    }
+
+    /**
+     * Configure Confidential Compute Attestation for the given system
+     * @param loggedInUser the user
+     * @param sid the ID of the system
+     * @param enabled set the enabled state for Confidential Compute Attestation
+     * @param environmentType set the environment type of the system
+     * @param attestOnBoot set if the attestation should be performed on system boot
+     * @return Returns 1 if successful, exception otherwise.
+     *
+     * @apidoc.doc Configure Confidential Compute Attestation for the given system
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid", "ID of the server to get the config for.")
+     * @apidoc.param #param_desc("boolean", "enabled", "set the enabled state for Confidential Compute Attestation")
+     * @apidoc.param #param_desc("string", "environmentType", "set the environment type of the system:")
+     *   #options()
+     *     #item("NONE")
+     *     #item("KVM_AMD_EPYC_MILAN")
+     *     #item("KVM_AMD_EPYC_GENOA")
+     *   #options_end()
+     * @apidoc.param #param_desc("boolean", "attestOnBoot", "set if the attestation should be performed on system boot")
+     * @apidoc.returntype #return_int_success()
+     */
+    public Integer setCoCoAttestationConfig(User loggedInUser, Integer sid, Boolean enabled, String environmentType,
+                                            Boolean attestOnBoot) {
+        MinionServer minionServer = SystemManager.lookupByIdAndUser(sid.longValue(), loggedInUser).asMinionServer()
+                .orElseThrow(NoSuchSystemException::new);
+
+        if (!minionServer.doesOsSupportCoCoAttestation()) {
+            throw new UnsupportedOperationException("System does not support Confidential Computing attestation");
+        }
+
+        minionServer.getOptCocoAttestationConfig()
+                .ifPresentOrElse(
+                        c -> {
+                            c.setEnabled(enabled);
+                            c.setEnvironmentType(CoCoEnvironmentType.valueOf(environmentType));
+                            c.setAttestOnBoot(attestOnBoot);
+                        },
+                        () -> attestationManager.createConfig(
+                            loggedInUser,
+                            minionServer,
+                            CoCoEnvironmentType.valueOf(environmentType),
+                            enabled,
+                            attestOnBoot
+                        )
+                );
+        return 1;
     }
 
     /**
@@ -5667,8 +6042,7 @@ public class SystemHandler extends BaseHandler {
                     break;
                 }
 
-                try {
-                    BufferedReader br = new BufferedReader(new FileReader(file));
+                try (BufferedReader br = new BufferedReader(new FileReader(file))) {
                     String line;
                     String[] header = null;
                     Integer systemIdPos = null, uuidPos = null;
@@ -5714,7 +6088,6 @@ public class SystemHandler extends BaseHandler {
                             }
                        }
                     }
-                    br.close();
                 }
                 catch (IOException e) {
                     log.warn("Cannot read {}", file.getName());
@@ -6223,172 +6596,6 @@ public class SystemHandler extends BaseHandler {
     }
 
     /**
-     * Schedules an action to set the guests memory usage
-     * @param loggedInUser The current user
-     * @param sid the server ID of the guest
-     * @param memory the amount of memory to set the guest to use
-     * @return the action id of the scheduled action
-     *
-     * @apidoc.doc Schedule an action of a guest's host, to set that guest's memory
-     *          allocation
-     * @apidoc.param #session_key()
-     * @apidoc.param #param_desc("int", "sid", "The guest's system id")
-     * @apidoc.param #param_desc("int", "memory", "The amount of memory to
-     *          allocate to the guest")
-     *  @apidoc.returntype #param_desc("int", "actionID", "the action Id for the schedule action
-     *              on the host system")
-     *
-     */
-    public int setGuestMemory(User loggedInUser, Integer sid, Integer memory) {
-        VirtualInstance vi = VirtualInstanceFactory.getInstance().lookupByGuestId(
-                loggedInUser.getOrg(), sid.longValue());
-
-        try {
-            return VirtualizationActionHelper.scheduleAction(
-                    vi.getUuid(),
-                    loggedInUser,
-                    vi.getHostSystem(),
-                    VirtualizationActionHelper.getGuestSetterActionCreator(
-                            ActionFactory.TYPE_VIRTUALIZATION_SET_MEMORY,
-                            (data) -> memory * 1024,
-                            (action, value) -> ((VirtualizationSetMemoryGuestAction)action).setMemory(value),
-                            Map.of(vi.getUuid(), vi.getGuestSystem().getName())
-                    ),
-                    new VirtualGuestSetterActionJson());
-        }
-        catch (com.redhat.rhn.taskomatic.TaskomaticApiException e) {
-            throw new TaskomaticApiException(e.getMessage());
-        }
-    }
-
-
-    /**
-     * Schedules an actino to set the guests CPU allocation
-     * @param loggedInUser The current user
-     * @param sid the server ID of the guest
-     * @param numOfCpus the num of cpus to set
-     * @return the action id of the scheduled action
-     *
-     * @apidoc.doc Schedule an action of a guest's host, to set that guest's CPU
-     *          allocation
-     * @apidoc.param #session_key()
-     * @apidoc.param #param_desc("int", "sid", "The guest's system id")
-     * @apidoc.param #param_desc("int", "numOfCpus", "The number of virtual cpus to
-     *          allocate to the guest")
-     *  @apidoc.returntype #param_desc("int", "actionID", "the action Id for the schedule action
-     *              on the host system")
-     *
-     */
-    public int setGuestCpus(User loggedInUser, Integer sid, Integer numOfCpus) {
-        VirtualInstance vi = VirtualInstanceFactory.getInstance().lookupByGuestId(
-                loggedInUser.getOrg(), sid.longValue());
-
-        try {
-            return VirtualizationActionHelper.scheduleAction(
-                    vi.getUuid(),
-                    loggedInUser,
-                    vi.getHostSystem(),
-                    VirtualizationActionHelper.getGuestSetterActionCreator(
-                            ActionFactory.TYPE_VIRTUALIZATION_SET_VCPUS,
-                            (data) -> numOfCpus,
-                            (action, value) -> ((VirtualizationSetVcpusGuestAction)action).setVcpu(value),
-                            Map.of(vi.getUuid(), vi.getGuestSystem().getName())
-                    ),
-                    new VirtualGuestSetterActionJson());
-        }
-        catch (com.redhat.rhn.taskomatic.TaskomaticApiException e) {
-            throw new TaskomaticApiException(e.getMessage());
-        }
-    }
-
-    /**
-     *  schedules the specified action on the guest
-     * @param loggedInUser The current user
-     * @param sid the id of the system
-     * @param state one of the following: 'start', 'suspend', 'resume', 'restart',
-     *          'shutdown'
-     * @param date the date to schedule it
-     * @return action ID
-     *
-     * @apidoc.doc Schedules a guest action for the specified virtual guest for a given
-     *          date/time.
-     * @apidoc.param #session_key()
-     * @apidoc.param #param_desc("int", "sid", "the system Id of the guest")
-     * @apidoc.param #param_desc("string", "state", "One of the following actions  'start',
-     *          'suspend', 'resume', 'restart', 'shutdown'.")
-     * @apidoc.param  #param_desc($date, "date", "the time/date to schedule the action")
-     * @apidoc.returntype #param_desc("int", "actionId", "The action id of the scheduled action")
-     */
-    public int scheduleGuestAction(User loggedInUser, Integer sid, String state,
-            Date date) {
-        VirtualInstance vi = VirtualInstanceFactory.getInstance().lookupByGuestId(
-                loggedInUser.getOrg(), sid.longValue());
-
-        ActionType action;
-        if (state.equals("start")) {
-            action = ActionFactory.TYPE_VIRTUALIZATION_START;
-        }
-        else if (state.equals("suspend")) {
-            action = ActionFactory.TYPE_VIRTUALIZATION_SUSPEND;
-        }
-        else if (state.equals("resume")) {
-            action = ActionFactory.TYPE_VIRTUALIZATION_RESUME;
-        }
-        else if (state.equals("restart")) {
-            action = ActionFactory.TYPE_VIRTUALIZATION_REBOOT;
-        }
-        else if (state.equals("shutdown")) {
-            action = ActionFactory.TYPE_VIRTUALIZATION_SHUTDOWN;
-        }
-        else {
-            throw new InvalidActionTypeException();
-        }
-
-        try {
-            VirtualGuestsBaseActionJson data = new VirtualGuestsBaseActionJson();
-            data.setUuids(List.of(vi.getUuid()));
-            data.setForce(false);
-            data.setEarliest(
-                Optional.ofNullable(date).map((localDate) -> {
-                    ZoneId zoneId = Context.getCurrentContext().getTimezone().toZoneId();
-                    return LocalDateTime.ofInstant(localDate.toInstant(), zoneId);
-                })
-            );
-            return VirtualizationActionHelper.scheduleAction(
-                    vi.getUuid(),
-                    loggedInUser,
-                    vi.getHostSystem(),
-                    VirtualizationActionHelper.getGuestActionCreator(
-                            action,
-                            Map.of(vi.getUuid(), vi.getGuestSystem().getName())),
-                    data);
-        }
-        catch (com.redhat.rhn.taskomatic.TaskomaticApiException e) {
-            throw new TaskomaticApiException(e.getMessage());
-        }
-    }
-
-    /**
-     *  schedules the specified action on the guest
-     * @param loggedInUser The current user
-     * @param sid the id of the system
-     * @param state one of the following: 'start', 'suspend', 'resume', 'restart',
-     *          'shutdown'
-     * @return action ID
-     *
-     * @apidoc.doc Schedules a guest action for the specified virtual guest for the
-     *          current time.
-     * @apidoc.param #session_key()
-     * @apidoc.param #param_desc("int", "sid", "the system Id of the guest")
-     * @apidoc.param #param_desc("string", "state", "One of the following actions  'start',
-     *          'suspend', 'resume', 'restart', 'shutdown'.")
-     * @apidoc.returntype #param_desc("int", "actionId", "The action id of the scheduled action")
-     */
-    public int scheduleGuestAction(User loggedInUser, Integer sid, String state) {
-        return scheduleGuestAction(loggedInUser, sid, state, null);
-    }
-
-    /**
      * List the activation keys the system was registered with.
      * @param loggedInUser The current user
      * @param sid the host system id
@@ -6571,6 +6778,10 @@ public class SystemHandler extends BaseHandler {
      * @apidoc.returntype #return_int_success()
      */
     public int createSystemRecord(User loggedInUser, Integer sid, String ksLabel) {
+        if (loggedInUser == null) {
+            throw new FaultException(-2, "loggedInUserNull", "The logged in user was null!");
+        }
+
         Server server = null;
         try {
             server = SystemManager.lookupByIdAndUser(sid.longValue(),
@@ -6586,9 +6797,7 @@ public class SystemHandler extends BaseHandler {
         }
 
         KickstartData ksData = lookupKsData(ksLabel, loggedInUser.getOrg());
-        CobblerSystemCreateCommand cmd = new CobblerSystemCreateCommand(
-                loggedInUser, ksData.getCobblerObject(loggedInUser).getName(),
-                ksData, server.getName(), loggedInUser.getOrg().getId());
+        CobblerSystemCreateCommand cmd = new CobblerSystemCreateCommand(loggedInUser, ksData, server);
         cmd.store();
 
         return 1;
@@ -6614,8 +6823,8 @@ public class SystemHandler extends BaseHandler {
      *      #array_begin("netDevices")
      *          #struct_begin("network device")
      *              #prop("string", "name")
-     *              #prop("string", "mac")
      *              #prop("string", "ip")
+     *              #prop("string", "mac")
      *              #prop("string", "dnsname")
      *          #struct_end()
      *      #array_end()
@@ -6623,6 +6832,10 @@ public class SystemHandler extends BaseHandler {
      */
     public int createSystemRecord(User loggedInUser, String systemName, String ksLabel,
             String kOptions, String comment, List<Map<String, String>> netDevices) {
+        if (loggedInUser == null) {
+            throw new FaultException(-2, "loggedInUserNull", "The logged in user was null!");
+        }
+
         // Determine the user and lookup the kickstart profile
         KickstartData ksData = lookupKsData(ksLabel, loggedInUser.getOrg());
 
@@ -6632,9 +6845,18 @@ public class SystemHandler extends BaseHandler {
         server.setOrg(loggedInUser.getOrg());
 
         // Create cobbler command
-        CobblerUnregisteredSystemCreateCommand cmd;
-        cmd = new CobblerUnregisteredSystemCreateCommand(loggedInUser, server,
-                ksData.getCobblerObject(loggedInUser).getName());
+        org.cobbler.Profile profile = ksData.getCobblerObject(loggedInUser);
+        if (profile == null) {
+            throw new FaultException(-2, "ksLabelProfileError", String.format(
+                "The profile for the ksLabel \"%s\" could not be found!",
+                ksData.getLabel()
+            ));
+        }
+        CobblerUnregisteredSystemCreateCommand cmd = new CobblerUnregisteredSystemCreateCommand(
+            loggedInUser,
+            server,
+            profile.getName()
+        );
 
         // Set network device information to the server
         for (Map<String, String> map : netDevices) {
@@ -6701,6 +6923,64 @@ public class SystemHandler extends BaseHandler {
         catch (IllegalArgumentException e) {
             throw new InvalidParameterException("Can't create system", e);
         }
+    }
+
+    /**
+     * Register foreign peripheral server
+     *
+     * @param loggedInUser The current user
+     * @param fqdn         FQDN of the server
+     * @return 1 on success
+     *
+     * @apidoc.doc Register foreign peripheral server.
+     * This is used for registering containerized peripheral servers.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("string", "fqdn", "FQDN of the server")
+     * @apidoc.returntype #return_int_success()
+     */
+    public int registerPeripheralServer(User loggedInUser, String fqdn) {
+        ensureOrgAdmin(loggedInUser);
+        try {
+            return systemManager.registerPeripheralServer(loggedInUser, fqdn).getId().intValue();
+        }
+        catch (SystemsExistException e) {
+            throw new SystemsExistFaultException(e.getSystemIds());
+        }
+    }
+
+    /**
+     * Update foreign peripheral server info
+     *
+     * @param loggedInUser The current user
+     * @param sid Server ID
+     * @param reportDbName ReportDB name
+     * @param reportDbHost ReportDB host
+     * @param reportDbPort ReportDB port
+     * @param reportDbUser ReportDB user
+     * @param reportDbPassword ReportDB password
+     * @return 1 on success
+     *
+     * @apidoc.doc Update foreign peripheral server info.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("string", "reportDbName", "ReportDB name")
+     * @apidoc.param #param_desc("string", "reportDbHost", "ReportDB host")
+     * @apidoc.param #param_desc("int", "reportDbPort", "ReportDB port")
+     * @apidoc.param #param_desc("string", "reportDbUser", "ReportDB user")
+     * @apidoc.param #param_desc("string", "reportDbPassword", "ReportDB password")
+     * @apidoc.returntype #return_int_success()
+     */
+    public int updatePeripheralServerInfo(User loggedInUser, Integer sid, String reportDbName, String reportDbHost,
+                       Integer reportDbPort, String reportDbUser, String reportDbPassword) {
+        ensureOrgAdmin(loggedInUser);
+        Server server = null;
+        try {
+            server = SystemManager.lookupByIdAndUser(sid.longValue(), loggedInUser);
+        }
+        catch (LookupException e) {
+            throw new NoSuchSystemException();
+        }
+        return SystemManager.updatePeripheralServerInfo(server, reportDbName, reportDbHost,
+                                               reportDbPort, reportDbUser, reportDbPassword);
     }
 
     /**
@@ -7797,7 +8077,7 @@ public class SystemHandler extends BaseHandler {
                             }
                             return ps.getIsEveryChannelSynced();
                         })
-                        .collect(toList());
+                        .toList();
                 targetProducts = !syncedTargets.isEmpty() ? syncedTargets.get(syncedTargets.size() - 1) : null;
                 log.info("Using migration target: {}", targetProducts);
             }
@@ -7839,7 +8119,8 @@ public class SystemHandler extends BaseHandler {
                         channelIDs.add(channel.getId());
                     }
                     return DistUpgradeManager.scheduleDistUpgrade(loggedInUser, server,
-                            targetProducts, channelIDs, dryRun, allowVendorChange, earliestOccurrence);
+                            targetProducts, channelIDs, dryRun, allowVendorChange,
+                            earliestOccurrence, cloudPaygManager.isPaygInstance());
                 }
 
                 // Consider alternatives (cloned channel trees)
@@ -7849,12 +8130,17 @@ public class SystemHandler extends BaseHandler {
                     if (clonedBaseChannel.getLabel().equals(baseChannelLabel)) {
                         channelIDs.addAll(alternatives.get(clonedBaseChannel));
                         return DistUpgradeManager.scheduleDistUpgrade(loggedInUser, server,
-                                targetProducts, channelIDs, dryRun, allowVendorChange, earliestOccurrence);
+                                targetProducts, channelIDs, dryRun, allowVendorChange,
+                                earliestOccurrence, cloudPaygManager.isPaygInstance());
                     }
                 }
             }
             catch (com.redhat.rhn.taskomatic.TaskomaticApiException e) {
                 throw new TaskomaticApiException(e.getMessage());
+            }
+            catch (DistUpgradePaygException e) {
+                // We forbid product migration in SUMA PAYG instance in certain situations
+                throw new FaultException(-1, "productMigrationNotAllowedPayg", e.getMessage());
             }
         }
 
@@ -7941,7 +8227,12 @@ public class SystemHandler extends BaseHandler {
         try {
             channelIDs = DistUpgradeManager.performChannelChecks(channels, loggedInUser);
             return DistUpgradeManager.scheduleDistUpgrade(loggedInUser, server, null,
-                    channelIDs, dryRun, allowVendorChange, earliestOccurrence);
+                    channelIDs, dryRun, allowVendorChange,
+                    earliestOccurrence, cloudPaygManager.isPaygInstance());
+        }
+        catch (DistUpgradePaygException e) {
+            // We forbid product migration in SUMA PAYG instance in certain situations
+            throw new FaultException(-1, "productMigrationNotAllowedPayg", e.getMessage());
         }
         catch (DistUpgradeException e) {
             throw new FaultException(-1, "distUpgradeChannelError", e.getMessage());
@@ -7997,7 +8288,7 @@ public class SystemHandler extends BaseHandler {
                 .map(p -> new SUSEInstalledProduct(p.getName(), p.getVersion(),
                         p.getArch().getLabel(), p.getRelease(), p.isBaseproduct(),
                         p.getSUSEProduct().getFriendlyName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -8374,8 +8665,8 @@ public class SystemHandler extends BaseHandler {
     public Long scheduleApplyHighstate(User loggedInUser, List<Integer> sids, Date earliestOccurrence, Boolean test) {
         List<Long> sysids = sids.stream().map(Integer::longValue).collect(Collectors.toList());
         try {
-            List<Long> visible = MinionServerFactory.lookupVisibleToUser(loggedInUser)
-                    .map(Server::getId).collect(Collectors.toList());
+            Set<Long> visible = MinionServerFactory.lookupVisibleToUser(loggedInUser)
+                    .map(Server::getId).collect(toSet());
             if (!visible.containsAll(sysids)) {
                 sysids.removeAll(visible);
                 throw new UnsupportedOperationException("Some System not managed with Salt: " + sysids);
@@ -8439,10 +8730,10 @@ public class SystemHandler extends BaseHandler {
      */
     public Long scheduleApplyStates(User loggedInUser, List<Integer> sids, List<String> stateNames,
             Date earliestOccurrence, Boolean test) {
-        List<Long> sysids = sids.stream().map(Integer::longValue).collect(Collectors.toList());
+        List<Long> sysids = sids.stream().map(Integer::longValue).toList();
         try {
             List<Long> visible = MinionServerFactory.lookupVisibleToUser(loggedInUser)
-                    .map(Server::getId).collect(Collectors.toList());
+                    .map(Server::getId).toList();
             if (!visible.containsAll(sysids)) {
                 sysids.removeAll(visible);
                 throw new UnsupportedOperationException("Some System not managed with Salt: " + sysids);
@@ -8567,6 +8858,122 @@ public class SystemHandler extends BaseHandler {
     }
 
     /**
+     * Get system pillar
+     *
+     * @param loggedInUser The Current User
+     * @param systemId the system id
+     * @param category category of the pillar data
+     * @return the pillar
+     *
+     * @apidoc.doc Get pillar data of given category for given system
+     * @apidoc.param #session_key()
+     * @apidoc.param #param("int", "systemId")
+     * @apidoc.param #param("string", "category")
+     * @apidoc.returntype #param("struct", "the pillar data")
+     */
+    @ReadOnly
+    public Map<String, Object> getPillar(User loggedInUser, Integer systemId, String category) {
+        ensureImageAdmin(loggedInUser);
+        Optional<MinionServer> opt = MinionServerFactory.lookupById(systemId.longValue());
+        if (!opt.isPresent()) {
+            throw new NoSuchSystemException();
+        }
+        return opt.get().getPillarByCategory(category)
+                .map(p -> p.getPillar())
+                .orElseGet(() -> new HashMap<String, Object>());
+    }
+
+    /**
+     * Get system pillar
+     *
+     * @param loggedInUser The Current User
+     * @param minionId the system id
+     * @param category category of the pillar data
+     * @return the pillar
+     *
+     * @apidoc.doc Get pillar data of given category for given system
+     * @apidoc.param #session_key()
+     * @apidoc.param #param("int", "minionId")
+     * @apidoc.param #param("string", "category")
+     * @apidoc.returntype #param("struct", "the pillar data")
+     */
+    @ReadOnly
+    public Map<String, Object> getPillar(User loggedInUser, String minionId, String category) {
+        ensureImageAdmin(loggedInUser);
+        Optional<MinionServer> opt = MinionServerFactory.findByMinionId(minionId);
+        if (!opt.isPresent()) {
+            throw new NoSuchSystemException();
+        }
+        return opt.get().getPillarByCategory(category)
+                .map(p -> p.getPillar())
+                .orElseGet(() -> new HashMap<String, Object>());
+    }
+
+    /**
+     * Set system pillar
+     *
+     * @param loggedInUser The Current User
+     * @param systemId the systemd id
+     * @param category category to store the pillar data under
+     * @param pillarData the new pillar
+     * @return 1 on success
+     *
+     * @apidoc.doc Set pillar data of a system.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param("int", "systemId")
+     * @apidoc.param #param("struct", "pillarData")
+     * @apidoc.returntype #return_int_success()
+     */
+    public int setPillar(User loggedInUser, Integer systemId, String category, Map<String, Object> pillarData) {
+        ensureImageAdmin(loggedInUser);
+        Optional<MinionServer> opt = MinionServerFactory.lookupById(systemId.longValue());
+        if (!opt.isPresent()) {
+            throw new NoSuchSystemException();
+        }
+        MinionServer minion = opt.get();
+        minion.getPillarByCategory(category).ifPresentOrElse(
+                p -> p.setPillar(pillarData),
+                () -> {
+                    Pillar newPillar = new Pillar(category, pillarData, minion);
+                    HibernateFactory.getSession().save(newPillar);
+                    minion.addPillar(newPillar);
+                });
+        return 1;
+    }
+
+    /**
+     * Set system pillar
+     *
+     * @param loggedInUser The Current User
+     * @param minionId the systemd id
+     * @param category category to store the pillar data under
+     * @param pillarData the new pillar
+     * @return 1 on success
+     *
+     * @apidoc.doc Set pillar data of a system.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param("int", "systemId")
+     * @apidoc.param #param("struct", "pillarData")
+     * @apidoc.returntype #return_int_success()
+     */
+    public int setPillar(User loggedInUser, String minionId, String category, Map<String, Object> pillarData) {
+        ensureImageAdmin(loggedInUser);
+        Optional<MinionServer> opt = MinionServerFactory.findByMinionId(minionId);
+        if (!opt.isPresent()) {
+            throw new NoSuchSystemException();
+        }
+        MinionServer minion = opt.get();
+        minion.getPillarByCategory(category).ifPresentOrElse(
+                p -> p.setPillar(pillarData),
+                () -> {
+                    Pillar newPillar = new Pillar(category, pillarData, minion);
+                    HibernateFactory.getSession().save(newPillar);
+                    minion.addPillar(newPillar);
+                });
+        return 1;
+    }
+
+    /**
      * Refresh all the pillar data of a list of systems.
      *
      * @param loggedInUser The current user
@@ -8575,7 +8982,7 @@ public class SystemHandler extends BaseHandler {
      *
      * @apidoc.doc refresh all the pillar data of a list of systems.
      * @apidoc.param #session_key()
-     * @apidoc.param #array_single("int", "sids")
+     * @apidoc.param #array_single("int", "sids", "System IDs to be refreshed. If empty, all systems will be refreshed")
      * @apidoc.returntype #array_single("int", "skippedIds", "System IDs which couldn't be refreshed")
      */
     public List<Integer> refreshPillar(User loggedInUser, List<Integer> sids) {
@@ -8594,7 +9001,7 @@ public class SystemHandler extends BaseHandler {
      * and can be one of 'general', 'group_membership', 'virtualization' or 'custom_info'.
      * @apidoc.param #session_key()
      * @apidoc.param #param("string", "subset", "subset of the pillar to refresh.")
-     * @apidoc.param #array_single("int", "sids")
+     * @apidoc.param #array_single("int", "sids", "System IDs to be refreshed. If empty, all systems will be refreshed")
      * @apidoc.returntype #array_single("int", "skippedIds", "System IDs which couldn't be refreshed")
      */
     public List<Integer> refreshPillar(User loggedInUser, String subset, List<Integer> sids) {
@@ -8602,9 +9009,16 @@ public class SystemHandler extends BaseHandler {
         MinionPillarManager.PillarSubset subsetValue = subset != null ?
                 MinionPillarManager.PillarSubset.valueOf(subset.toUpperCase()) :
                 null;
-        for (Integer sysId : sids) {
-            if (SystemManager.isAvailableToUser(loggedInUser, sysId.longValue())) {
-                Server system = SystemManager.lookupByIdAndUser(Long.valueOf(sysId), loggedInUser);
+        List<Long> sysids;
+        if (sids == null || sids.isEmpty()) {
+            sysids = MinionServerFactory.lookupVisibleToUser(loggedInUser).map(MinionServer::getId).toList();
+        }
+        else {
+            sysids = sids.stream().map(Integer::longValue).toList();
+        }
+        for (Long sysId : sysids) {
+            if (SystemManager.isAvailableToUser(loggedInUser, sysId)) {
+                Server system = SystemManager.lookupByIdAndUser(sysId, loggedInUser);
                 system.asMinionServer().ifPresentOrElse(
                     minionServer -> {
                         if (subsetValue != null) {
@@ -8616,13 +9030,13 @@ public class SystemHandler extends BaseHandler {
                     },
                     () -> {
                         log.warn("system {} is not a salt minion, hence pillar will not be updated", sysId);
-                        skipped.add(sysId);
+                        skipped.add(sysId.intValue());
                     }
                 );
             }
             else {
                 log.warn("system {} is not available to user, hence pillar will not be refreshed", sysId);
-                skipped.add(sysId);
+                skipped.add(sysId.intValue());
             }
         }
         return skipped;
@@ -8644,7 +9058,7 @@ public class SystemHandler extends BaseHandler {
      */
 
     public List<Long> changeProxy(User loggedInUser, List<Integer> sids, Integer proxyId) {
-        List<Long> sysids = sids.stream().map(Integer::longValue).collect(Collectors.toList());
+        List<Long> sysids = sids.stream().map(Integer::longValue).toList();
         try {
             return ActionManager.changeProxy(loggedInUser, sysids, proxyId.longValue());
         }
@@ -8656,6 +9070,131 @@ public class SystemHandler extends BaseHandler {
         }
         catch (java.lang.UnsupportedOperationException e) {
             throw new UnsupportedOperationException(e.getMessage());
+        }
+    }
+
+    /**
+     * Return a list of reports with its results for the given filters
+     * @param loggedInUser the user
+     * @param sid the system id
+     * @param earliest earliest report
+     * @return return a list of reports
+     *
+     * @apidoc.doc Return a list of reports with its results for the given filters
+     * @apidoc.param #session_key()
+     * @apidoc.param #param("int", "sid")
+     * @apidoc.param #param("$date", "earliest")
+     * @apidoc.returntype
+     *     #return_array_begin()
+     *         $ServerCoCoAttestationReportSerializer
+     *     #array_end()
+     */
+    @ReadOnly
+    public List<ServerCoCoAttestationReport> listCoCoAttestationReports(User loggedInUser, Integer sid, Date earliest) {
+        return listCoCoAttestationReports(loggedInUser, sid, earliest, 0, Integer.MAX_VALUE);
+    }
+
+    /**
+     * Return a list of reports with its results for the given filters
+     * @param loggedInUser the user
+     * @param sid the system id
+     * @param offset offset
+     * @param limit limit
+     * @return return a list of reports
+     *
+     * @apidoc.doc Return a list of reports with its results for the given filters
+     * @apidoc.param #session_key()
+     * @apidoc.param #param("int", "sid")
+     * @apidoc.param #param_desc("int", "offset", "Number of reports to skip")
+     * @apidoc.param #param_desc("int", "limit", "Maximum number of reports")
+     * @apidoc.returntype
+     *     #return_array_begin()
+     *         $ServerCoCoAttestationReportSerializer
+     *     #array_end()
+     */
+    @ReadOnly
+    public List<ServerCoCoAttestationReport> listCoCoAttestationReports(User loggedInUser, Integer sid, Integer offset,
+                                                                        Integer limit) {
+        return listCoCoAttestationReports(loggedInUser, sid, new Date(0), offset, limit);
+    }
+
+    /**
+     * Return a list of reports with its results for the given filters
+     * @param loggedInUser the user
+     * @param sid the system id
+     * @param earliest earliest report
+     * @param offset offset
+     * @param limit limit
+     * @return return a list of reports
+     *
+     * @apidoc.doc Return a list of reports with its results for the given filters
+     * @apidoc.param #session_key()
+     * @apidoc.param #param("int", "sid")
+     * @apidoc.param #param("$date", "earliest")
+     * @apidoc.param #param_desc("int", "offset", "Number of reports to skip")
+     * @apidoc.param #param_desc("int", "limit", "Maximum number of reports")
+     * @apidoc.returntype
+     *     #return_array_begin()
+     *         $ServerCoCoAttestationReportSerializer
+     *     #array_end()
+     */
+    @ReadOnly
+    public List<ServerCoCoAttestationReport> listCoCoAttestationReports(User loggedInUser, Integer sid, Date earliest,
+                                                                        Integer offset, Integer limit) {
+        Server server = SystemManager.lookupByIdAndUser(sid.longValue(), loggedInUser);
+
+        if (!server.doesOsSupportCoCoAttestation()) {
+            throw new UnsupportedOperationException("System does not support Confidential Computing attestation");
+        }
+
+        return attestationManager.listCoCoAttestationReportsForUserAndServer(loggedInUser, server, earliest,
+            offset, limit);
+    }
+
+    /**
+     * Return the latest attestation report for the given system
+     * @param loggedInUser the user
+     * @param sid the system id
+     * @return return the latest report
+     *
+     * @apidoc.doc Return the latest report for the given system
+     * @apidoc.param #session_key()
+     * @apidoc.param #param("int", "sid")
+     * @apidoc.returntype $ServerCoCoAttestationReportSerializer
+     */
+    @ReadOnly
+    public ServerCoCoAttestationReport getLatestCoCoAttestationReport(User loggedInUser, Integer sid) {
+        Server server = SystemManager.lookupByIdAndUser(sid.longValue(), loggedInUser);
+        return attestationManager.lookupLatestCoCoAttestationReport(loggedInUser, server);
+    }
+
+    /**
+     * Return a specific attestation result with details
+     * @param loggedInUser the user
+     * @param sid the server id
+     * @param resultId the result id
+     * @return return the result
+     *
+     * @apidoc.doc Return a specific results with all details
+     * @apidoc.param #session_key()
+     * @apidoc.param #param("int", "sid")
+     * @apidoc.param #param("int", "resultId")
+     * @apidoc.returntype $CoCoAttestationResultSerializer
+     */
+    @ReadOnly
+    public CoCoAttestationResult getCoCoAttestationResultDetails(User loggedInUser, Integer sid, Integer resultId) {
+        Server server = SystemManager.lookupByIdAndUser(sid.longValue(), loggedInUser);
+
+        if (!server.doesOsSupportCoCoAttestation()) {
+            throw new UnsupportedOperationException("System does not support Confidential Computing attestation");
+        }
+
+        try {
+            return attestationManager.lookupCoCoAttestationResult(loggedInUser, server, resultId)
+                .orElseThrow(() -> new EntityNotExistsFaultException(resultId));
+        }
+        catch (LookupException ex) {
+            throw new EntityNotExistsFaultException(resultId);
         }
     }
 
