@@ -25,9 +25,13 @@ import com.redhat.rhn.domain.errata.CveFactory;
 import com.redhat.rhn.domain.errata.Errata;
 import com.redhat.rhn.domain.errata.ErrataFactory;
 import com.redhat.rhn.domain.org.Org;
+import com.redhat.rhn.domain.org.OrgFactory;
 import com.redhat.rhn.domain.product.Tuple3;
 import com.redhat.rhn.domain.rhnpackage.Package;
 import com.redhat.rhn.domain.rhnpackage.PackageEvr;
+import com.redhat.rhn.domain.rhnpackage.PackageFactory;
+import com.redhat.rhn.frontend.dto.PackageDto;
+import com.redhat.rhn.manager.channel.ChannelManager;
 import com.redhat.rhn.manager.content.ContentSyncManager;
 import com.redhat.rhn.manager.content.MgrSyncUtils;
 import com.redhat.rhn.manager.errata.ErrataManager;
@@ -41,6 +45,7 @@ import com.google.gson.reflect.TypeToken;
 import com.google.gson.stream.JsonReader;
 import com.google.gson.stream.JsonWriter;
 
+import org.apache.commons.compress.compressors.bzip2.BZip2CompressorInputStream;
 import org.apache.http.HttpResponse;
 import org.apache.http.HttpStatus;
 import org.apache.http.client.methods.HttpGet;
@@ -50,6 +55,8 @@ import org.apache.logging.log4j.Logger;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.Reader;
+import java.lang.reflect.Type;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -64,6 +71,8 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class UbuntuErrataManager {
+
+    private static final Type ERRATA_INFO_TYPE = new TypeToken<Map<String, UbuntuErrataInfo>>() { }.getType();
 
     private static final Logger LOG = LogManager.getLogger(UbuntuErrataManager.class);
 
@@ -110,26 +119,63 @@ public class UbuntuErrataManager {
         }
     }
 
+    /**
+     * Special compare for epoch as NULL == "" == 0
+     * @param epochInA epoch A
+     * @param epochInB epoch B
+     * @return returns true if the epoch values are equal
+     */
+    private static boolean epochEquals(String epochInA, String epochInB) {
+        epochInA = Optional.ofNullable(epochInA)
+                .filter(e -> !e.equals("0"))
+                .orElse("");
+        epochInB = Optional.ofNullable(epochInB)
+                .filter(e -> !e.equals("0"))
+                .orElse("");
+        return epochInA.equals(epochInB);
+    }
+
     private static Map<String, UbuntuErrataInfo> downloadUbuntuErrataInfo(String jsonDBUrl) throws IOException {
         HttpClientAdapter httpClient = new HttpClientAdapter();
-        HttpGet httpGet = new HttpGet(jsonDBUrl);
+        String bzipJsonDBUrl = jsonDBUrl + ".bz2";
+        HttpGet httpGet = new HttpGet(bzipJsonDBUrl);
         LOG.info("download ubuntu errata start");
         HttpResponse httpResponse = httpClient.executeRequest(httpGet);
-        if (httpResponse.getStatusLine().getStatusCode() == HttpStatus.SC_OK) {
-            Map<String, UbuntuErrataInfo> errataInfo = GSON.fromJson(
-                    new InputStreamReader(httpResponse.getEntity().getContent()),
-                    new TypeToken<Map<String, UbuntuErrataInfo>>() { } .getType());
-            LOG.info("download ubuntu errata end");
-            return errataInfo;
+        int statusCode = httpResponse.getStatusLine().getStatusCode();
+        if (statusCode == HttpStatus.SC_OK) {
+            try (
+                InputStream responseStream = httpResponse.getEntity().getContent();
+                BZip2CompressorInputStream bzIn = new BZip2CompressorInputStream(responseStream);
+                Reader responseReader = new InputStreamReader(bzIn)
+            ) {
+                Map<String, UbuntuErrataInfo> errataInfo = GSON.fromJson(responseReader, ERRATA_INFO_TYPE);
+                LOG.info("download ubuntu errata end");
+                return errataInfo;
+            }
         }
         else {
-            throw new IOException("error downloading " + jsonDBUrl + " status code " +
-                   httpResponse.getStatusLine().getStatusCode());
+            LOG.info("Failed to get bzip2 DB - try plain DB");
+            httpGet = new HttpGet(jsonDBUrl);
+            httpResponse = httpClient.executeRequest(httpGet);
+            statusCode = httpResponse.getStatusLine().getStatusCode();
+            if (statusCode == HttpStatus.SC_OK) {
+                try (
+                        InputStream responseStream = httpResponse.getEntity().getContent();
+                        Reader responseReader = new InputStreamReader(responseStream)
+                ) {
+                    Map<String, UbuntuErrataInfo> errataInfo = GSON.fromJson(responseReader, ERRATA_INFO_TYPE);
+                    LOG.info("download ubuntu errata end");
+                    return errataInfo;
+                }
+            }
+            else {
+                throw new IOException("error downloading " + jsonDBUrl + " status code " + statusCode);
+            }
         }
     }
 
-    private static List<Entry> parseUbuntuErrata(Map<String, UbuntuErrataInfo> errataInfo) {
-        return errataInfo.values().stream().map(ubuntuErrataInfo -> {
+    private static Stream<Entry> parseUbuntuErrata(Map<String, UbuntuErrataInfo> errataInfo, Set<String> packageNames) {
+        return errataInfo.values().stream().flatMap(ubuntuErrataInfo -> {
             String description = ubuntuErrataInfo.getDescription().length() > 4000 ?
                     ubuntuErrataInfo.getDescription().substring(0, 4000) :
                     ubuntuErrataInfo.getDescription();
@@ -138,6 +184,9 @@ public class UbuntuErrataManager {
                     .flatMap(release ->
                             release.getValue().getBinaries().entrySet().stream().flatMap(binary -> {
                                 String name = binary.getKey();
+                                if (!packageNames.contains(name)) {
+                                    return Stream.empty();
+                                }
                                 String version = binary.getValue().getVersion();
 
                                 List<String> archs = release.getValue().getArchs()
@@ -157,12 +206,17 @@ public class UbuntuErrataManager {
                                                     else {
                                                         return Stream.empty();
                                                     }
-                                                }).collect(Collectors.toList());
+                                                }).toList();
                                 return Stream.of(new Tuple3<>(name, version, archs));
                             })
-                    ).collect(Collectors.toList());
+                    ).toList();
 
-            return new Entry(
+            if (packageData.isEmpty()) {
+                // Skip Errata when we have no matching packages
+                LOG.debug("Skipping errata without matching packages: {}", ubuntuErrataInfo.getId());
+                return Stream.empty();
+            }
+            return Stream.of(new Entry(
                     ubuntuErrataInfo.getId(),
                     ubuntuErrataInfo.getCves(),
                     ubuntuErrataInfo.getSummary(),
@@ -170,17 +224,20 @@ public class UbuntuErrataManager {
                     ubuntuErrataInfo.getTimestamp(),
                     description,
                     reboot,
-                    packageData);
-        }).collect(Collectors.toList());
+                    packageData));
+        });
     }
 
     private static Map<String, UbuntuErrataInfo> getUbuntuErrataInfo() throws IOException {
         String jsonDBUrl = "https://usn.ubuntu.com/usn-db/database.json";
         if (isFromDir()) {
             URI uri = MgrSyncUtils.urlToFSPath(jsonDBUrl, "");
-            InputStream inputStream = Files.newInputStream(Paths.get(uri));
-            return GSON.fromJson(new InputStreamReader(inputStream),
-                    new TypeToken<Map<String, UbuntuErrataInfo>>() { }.getType());
+            try (
+                InputStream inputStream = Files.newInputStream(Paths.get(uri));
+                Reader fileReader = new InputStreamReader(inputStream)
+            ) {
+                return GSON.fromJson(fileReader, ERRATA_INFO_TYPE);
+            }
         }
         else {
             return downloadUbuntuErrataInfo(jsonDBUrl);
@@ -193,70 +250,67 @@ public class UbuntuErrataManager {
      * @throws IOException in case of download issues
      */
     public static void sync(Set<Long> channelIds) throws IOException {
-        List<Entry> ubuntuErrataInfo = parseUbuntuErrata(getUbuntuErrataInfo());
-        processUbuntuErrataByIds(channelIds, ubuntuErrataInfo);
+        LOG.debug("sync started - check deb packages in channels, totalMemory:{}, freeMemory:{}",
+            Runtime.getRuntime().totalMemory(), Runtime.getRuntime().freeMemory());
+
+        // Extract the deb packages from each channel
+        var packagesByChannelMap = channelIds.stream()
+                                             .map(ChannelFactory::lookupById)
+                                             .filter(c -> c.isTypeDeb() && !c.isCloned())
+                                             .collect(Collectors.toMap(c -> c,
+                                                     c -> Set.copyOf(ChannelManager.listAllPackages(c))));
+
+
+        if (packagesByChannelMap.isEmpty()) {
+            LOG.info("No deb packages to process in channels: {}", channelIds);
+            LOG.debug("check deb packages in channels finished - done, totalMemory:{}, freeMemory:{}",
+                Runtime.getRuntime().totalMemory(), Runtime.getRuntime().freeMemory());
+            return;
+        }
+        Set<String> packageNames = packagesByChannelMap.entrySet().stream()
+                .flatMap(entry -> entry.getValue().stream())
+                .map(PackageDto::getName)
+                .collect(Collectors.toSet());
+
+        LOG.debug("check deb packages in channels finished - get and parse errata");
+        Stream<Entry> ubuntuErrataInfo = parseUbuntuErrata(getUbuntuErrataInfo(), packageNames);
+        LOG.debug("get and parse errata finished - process Ubuntu Errata");
+        processUbuntuErrata(packagesByChannelMap, ubuntuErrataInfo);
+        LOG.debug("process Ubuntu Errata finished - done, totalMemory:{}, freeMemory:{}",
+            Runtime.getRuntime().totalMemory(), Runtime.getRuntime().freeMemory());
     }
 
     /**
      * Processes ubuntu errata and tries to associate them to the given channels
-     * @param channelIds list of channel ids to match errata against
+     * @param packagesMap Map of deb packages by their corresponding channel
      * @param ubuntuErrataInfo list of ubuntu errata entries
      */
-    public static void processUbuntuErrataByIds(Set<Long> channelIds, List<Entry> ubuntuErrataInfo) {
-        processUbuntuErrata(channelIds.stream()
-                .map(ChannelFactory::lookupById)
-                .collect(Collectors.toSet()), ubuntuErrataInfo);
-    }
-
-    /**
-     * Processes ubuntu errata and tries to associate them to the given channels
-     * @param channels list of channels to match errata against
-     * @param ubuntuErrataInfo list of ubuntu errata entries
-     */
-    public static void processUbuntuErrata(Set<Channel> channels, List<Entry> ubuntuErrataInfo) {
-
-        Map<Channel, Set<Package>> ubuntuChannels = channels.stream()
-                .filter(c -> c.isTypeDeb() && !c.isCloned())
-                .collect(Collectors.toMap(c -> c, Channel::getPackages));
-
-        List<String> uniqueCVEs = ubuntuErrataInfo.stream()
-                .flatMap(e -> e.getCves().stream().filter(c -> c.startsWith("CVE-")))
-                .distinct()
-                .collect(Collectors.toList());
-
-        Map<String, Cve> cveByName = TimeUtils.logTime(LOG, "looking up " +  uniqueCVEs.size() + " CVEs",
-                () -> uniqueCVEs.stream()
-                        .map(CveFactory::lookupOrInsertByName)
-                        .collect(Collectors.toMap(Cve::getName, e -> e)));
-
+    public static void processUbuntuErrata(Map<Channel, Set<PackageDto>> packagesMap, Stream<Entry> ubuntuErrataInfo) {
         Set<Errata> changedErrata = new HashSet<>();
-        TimeUtils.logTime(LOG, "writing " + ubuntuErrataInfo.size() + " erratas to db", () -> ubuntuErrataInfo.stream()
-                .flatMap(entry -> {
-
-
-            Map<Channel, Set<Package>> matchingPackagesByChannel =
+        TimeUtils.logTime(LOG, "writing erratas to db", () -> ubuntuErrataInfo.flatMap(entry -> {
+            Map<Channel, Set<PackageDto>> matchingPackagesByChannel =
                     TimeUtils.logTime(LOG, "matching packages for " + entry.getId(),
-                            () -> ubuntuChannels.entrySet().stream()
+                            () -> packagesMap.entrySet().stream()
                                     .collect(Collectors.toMap(Map.Entry::getKey,
-                                            c -> c.getValue().stream().filter(p -> entry.getPackages().stream()
+                                            c -> c.getValue().stream()
+                                                    .filter(p -> entry.getPackages().stream()
+                                                            .anyMatch(e -> e.getA().equals(p.getName())))
+                                                    .filter(p -> entry.getPackages().stream()
                                                     .anyMatch(e -> {
 
                                     PackageEvr packageEvr = PackageEvr.parseDebian(e.getB());
                                     return e.getC().stream()
-                                            .anyMatch(arch -> p.getPackageName().getName().equals(e.getA()) &&
-                                                archToPackageArchLabel(arch)
-                                                        .map(a -> p.getPackageArch().getLabel().equals(a))
-                                                        .orElse(false) &&
-                                                p.getPackageEvr().getVersion().equals(packageEvr.getVersion()) &&
-                                                p.getPackageEvr().getRelease().equals(packageEvr.getRelease()) &&
-                                                Optional.ofNullable(p.getPackageEvr().getEpoch())
-                                                        .equals(Optional.ofNullable(packageEvr.getEpoch())) &&
-                                                p.getPackageEvr().getPackageType()
-                                                        .equals(packageEvr.getPackageType()));
+                                            .anyMatch(arch -> p.getName().equals(e.getA()) &&
+                                                    archToPackageArchLabel(arch)
+                                                            .map(a -> p.getArchLabel().equals(a))
+                                                            .orElse(false) &&
+                                                    p.getVersion().equals(packageEvr.getVersion()) &&
+                                                    p.getRelease().equals(packageEvr.getRelease()) &&
+                                                    epochEquals(p.getEpoch(), packageEvr.getEpoch())
+                                            );
+                                    })).collect(Collectors.toSet()))));
 
-                                })).collect(Collectors.toSet()))));
-
-            Map<Optional<Org>, Map<Channel, Set<Package>>> collect = matchingPackagesByChannel.entrySet().stream()
+            Map<Optional<Org>, Map<Channel, Set<PackageDto>>> collect = matchingPackagesByChannel.entrySet().stream()
                     .collect(Collectors.groupingBy(e -> Optional.ofNullable(e.getKey().getOrg()),
                             Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
 
@@ -293,15 +347,22 @@ public class UbuntuErrataManager {
                 errata.setProduct("Ubuntu");
                 errata.setSolution("-");
                 errata.setSynopsis(entry.getIsummary());
+
+                // faster lookup for existing entries
+                Map<String, Cve> cveByName = errata.getCves().stream()
+                    .collect(Collectors.toMap(Cve::getName, cve -> cve));
+
                 Set<Cve> cves = entry.getCves().stream()
                         .filter(c -> c.startsWith("CVE-"))
-                        .map(cveByName::get)
+                        .map(name -> cveByName.computeIfAbsent(name, CveFactory::lookupOrInsertByName))
                         .collect(Collectors.toSet());
                 errata.setCves(cves);
                 errata.setDescription(entry.getDescription());
 
                 Set<Package> packages = e.getValue().entrySet().stream()
                         .flatMap(x -> x.getValue().stream())
+                        .map(d -> PackageFactory.lookupByIdAndOrg(d.getId(),
+                                org.orElseGet(OrgFactory::getSatelliteOrg)))
                         .collect(Collectors.toSet());
                 if (errata.getPackages() == null) {
                     errata.setPackages(packages);
@@ -330,8 +391,8 @@ public class UbuntuErrataManager {
         // add changed errata to notification queue
         Map<Long, List<Long>> errataToChannels = changedErrata.stream().collect(
                 Collectors.toMap(
-                        e -> e.getId(),
-                        e -> e.getChannels().stream().map(c -> c.getId()).collect(Collectors.toList())
+                        Errata::getId,
+                        e -> e.getChannels().stream().map(Channel::getId).toList()
                         )
                 );
         changedErrata.stream().flatMap(e -> e.getChannels().stream()).distinct()
