@@ -44,7 +44,6 @@ import com.redhat.rhn.testing.TestUtils;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Date;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
@@ -73,7 +72,10 @@ public class MockModulemdApi extends ModulemdApi {
     }
 
     @Override
-    public List<String> getAllPackages(Modules modules) {
+    public List<String> getAllPackages(List<Channel> sources) {
+        // Dummy call to trigger RepositoryNotModular exception:
+        getMetadataPaths(sources);
+
         // Mock list
         try {
             return doGetAllPackages();
@@ -99,7 +101,7 @@ public class MockModulemdApi extends ModulemdApi {
         return new ModulePackagesResponse(getRpmApis(selectedModules), getPackages(selectedModules),
                 selectedModules.stream()
                         .map(m -> new ModuleInfo(m.getName(), m.getStream(), "1000000001", "6789abcd", "x86_64"))
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 
@@ -126,8 +128,10 @@ public class MockModulemdApi extends ModulemdApi {
     public static Channel createModularTestChannel(User user) throws Exception {
         Channel channel = TestUtils.reload(ChannelFactoryTest.createTestChannel(user, "channel-x86_64"));
         channel.setChecksumType(ChannelFactory.findChecksumTypeByLabel("sha1"));
-        Modules modulemd = new Modules("/path/to/modulemd.yaml", new Date());
-        channel.addModules(modulemd);
+        Modules modulemd = new Modules();
+        modulemd.setChannel(channel);
+        modulemd.setRelativeFilename("/path/to/modulemd.yaml");
+        channel.setModules(modulemd);
 
         List<String> nevras = doGetAllPackages();
         // perl 5.26 is a special package which is included in the module definition even though it's not served as a
@@ -204,8 +208,8 @@ public class MockModulemdApi extends ModulemdApi {
                 // Return multiple versions of the package. The different versions are represented as separate module
                 // entries in the metadata and they are merged in to a package list with multiple versions.
                 pkgList.addAll(asList(
-                        "perl-0:5.24.0-xxx.x86_64",
-                        "perl-0:5.24.1-yyy.x86_64"
+                        "perl-0:5.24.0-1.module_xxx.x86_64",
+                        "perl-0:5.24.1-1.module_yyy.x86_64"
                 ));
             }
             else {
@@ -229,14 +233,14 @@ public class MockModulemdApi extends ModulemdApi {
     }
 
     private static List<String> getMetadataPaths(List<Channel> sources) throws RepositoryNotModularException {
-        return sources.stream().map(MockModulemdApi::getMetadataPath).collect(Collectors.toList());
+        return sources.stream().map(MockModulemdApi::getMetadataPath).toList();
     }
 
     private static String getMetadataPath(Channel channel) throws RepositoryNotModularException {
         if (!channel.isModular()) {
             throw new RepositoryNotModularException();
         }
-        Modules metadata = channel.getLatestModules();
+        Modules metadata = channel.getModules();
         return new File(MOUNT_POINT_PATH, metadata.getRelativeFilename()).getAbsolutePath();
     }
 
