@@ -19,20 +19,19 @@ import static com.suse.manager.webui.services.SaltConstants.ORG_STATES_DIRECTORY
 import com.redhat.rhn.GlobalInstanceHolder;
 import com.redhat.rhn.common.conf.Config;
 import com.redhat.rhn.common.hibernate.HibernateFactory;
-import com.redhat.rhn.domain.common.SatConfigFactory;
+import com.redhat.rhn.domain.common.RhnConfiguration;
+import com.redhat.rhn.domain.common.RhnConfigurationFactory;
 import com.redhat.rhn.domain.config.ConfigChannel;
 import com.redhat.rhn.domain.config.ConfigContent;
+import com.redhat.rhn.domain.config.ConfigFile;
 import com.redhat.rhn.domain.config.ConfigRevision;
 import com.redhat.rhn.domain.config.ConfigurationFactory;
-import com.redhat.rhn.domain.formula.FormulaFactory;
 import com.redhat.rhn.domain.kickstart.KickstartData;
 import com.redhat.rhn.domain.kickstart.KickstartFactory;
 import com.redhat.rhn.domain.kickstart.KickstartSession;
-import com.redhat.rhn.domain.org.OrgFactory;
 import com.redhat.rhn.domain.server.MinionServer;
 import com.redhat.rhn.domain.server.MinionServerFactory;
 import com.redhat.rhn.domain.server.Server;
-import com.redhat.rhn.domain.server.ServerGroupFactory;
 import com.redhat.rhn.domain.state.ServerStateRevision;
 import com.redhat.rhn.domain.state.StateFactory;
 import com.redhat.rhn.domain.task.Task;
@@ -60,6 +59,7 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * Class responsible for executing one-time upgrade logic
@@ -80,10 +80,12 @@ public class UpgradeCommand extends BaseTransactionCommand {
             UPGRADE_TASK_NAME + "refresh_custom_sls_files";
     public static final String REFRESH_VIRTHOST_PILLARS =
             UPGRADE_TASK_NAME + "virthost_pillar_refresh";
-    public static final String PILLARS_FROM_FILES =
-            UPGRADE_TASK_NAME + "pillars_from_files";
+    public static final String REFRESH_ALL_SYSTEMS_PILLARS =
+            UPGRADE_TASK_NAME + "all_systems_pillar_refresh";
     public static final String SYSTEM_THRESHOLD_FROM_CONFIG =
             UPGRADE_TASK_NAME + "system_threshold_conf";
+    public static final String ALL_SYSTEMS_SYNC_ALL =
+            UPGRADE_TASK_NAME + "all_systems_sync_all";
 
     private final Path saltRootPath;
     private final Path legacyStatesBackupDirectory;
@@ -153,11 +155,14 @@ public class UpgradeCommand extends BaseTransactionCommand {
                     case REFRESH_VIRTHOST_PILLARS:
                         refreshVirtHostPillar();
                         break;
-                    case PILLARS_FROM_FILES:
-                        migratePillarsFromFiles();
-                        break;
                     case SYSTEM_THRESHOLD_FROM_CONFIG:
                         convertSystemThresholdFromConfig();
+                        break;
+                    case REFRESH_ALL_SYSTEMS_PILLARS:
+                        refreshAllSystemsPillar();
+                        break;
+                    case ALL_SYSTEMS_SYNC_ALL:
+                        allSystemsSyncAll();
                         break;
                     default:
                 }
@@ -197,7 +202,7 @@ public class UpgradeCommand extends BaseTransactionCommand {
      * with {@link ConfigFile} with path='/init.sls', single {@link ConfigRevision} pointing to
      * {@link ConfigContent} with empty content.
      *
-     * This method is responsible of populating that {@link ConfigContent} based on the contents
+     * This method is responsible for populating that {@link ConfigContent} based on the contents
      * of the state file on the disk.
      *
      * Before the import, the files corresponding to the legacy states are backed up to a separate directory.
@@ -316,10 +321,12 @@ public class UpgradeCommand extends BaseTransactionCommand {
 
     // list of directories with given prefix and natural number suffix in the salt root
     private Set<Path> listDirsWithPrefix(String prefix) throws IOException {
-        return Files.list(saltRootPath)
+        try (Stream<Path> pathStream = Files.list(saltRootPath)) {
+            return pathStream
                 .filter(path -> path.getFileName().toString().matches("^" + prefix + "\\d*$") &&
-                        path.toFile().isDirectory())
+                    path.toFile().isDirectory())
                 .collect(Collectors.toSet());
+        }
     }
 
     /**
@@ -353,9 +360,9 @@ public class UpgradeCommand extends BaseTransactionCommand {
         try {
             List<MinionServer> virtHosts = MinionServerFactory.listMinions().stream()
                     .filter(Server::hasVirtualizationEntitlement)
-                    .collect(Collectors.toList());
+                    .toList();
             virtHosts.forEach(MinionPillarManager.INSTANCE::generatePillar);
-            List<String> minionIds = virtHosts.stream().map(MinionServer::getMinionId).collect(Collectors.toList());
+            List<String> minionIds = virtHosts.stream().map(MinionServer::getMinionId).toList();
             GlobalInstanceHolder.SALT_API.refreshPillar(new MinionList(minionIds));
             log.warn("Refreshed virtualization hosts pillar");
         }
@@ -364,30 +371,41 @@ public class UpgradeCommand extends BaseTransactionCommand {
         }
     }
 
-    private void migratePillarsFromFiles() {
-        log.warn("Migrating pillars and formula pillars to database");
-        // Convert the formula order
-        FormulaFactory.saveFormulaOrder();
-
-        // Convert the global pillars
-        SaltStateGeneratorService.generateMgrConfPillar();
-
-        // Convert minion pillars and formulas
-        List<MinionServer> minions = MinionServerFactory.listMinions();
-        minions.forEach(minion -> {
-            MinionPillarManager.INSTANCE.generatePillar(minion);
-            FormulaFactory.convertServerFormulasFromFiles(minion);
-        });
-
-        // Convert group formulas
-        OrgFactory.lookupAllOrgs().forEach(org -> ServerGroupFactory.listManagedGroups(org)
-                .forEach(FormulaFactory::convertGroupFormulasFromFiles));
-        log.warn("Migrated pillars and formula pillars to database");
+    /**
+     * Regenerate pillar data for every registered system.
+     */
+    private void refreshAllSystemsPillar() {
+        try {
+            List<MinionServer> hosts = MinionServerFactory.listMinions();
+            hosts.forEach(MinionPillarManager.INSTANCE::generatePillar);
+            List<String> minionIds = hosts.stream().map(MinionServer::getMinionId).toList();
+            GlobalInstanceHolder.SALT_API.refreshPillar(new MinionList(minionIds));
+            log.info("Refreshed hosts pillar");
+        }
+        catch (Exception e) {
+            log.error("Error refreshing hosts pillar. Ignoring.", e);
+        }
     }
 
     private void convertSystemThresholdFromConfig() {
         log.warn("Converting web.system_checkin_threshold to DB config");
-        SatConfigFactory.setSatConfigValue(SatConfigFactory.SYSTEM_CHECKIN_THRESHOLD,
+        RhnConfigurationFactory factory = RhnConfigurationFactory.getSingleton();
+        factory.updateConfigurationValue(RhnConfiguration.KEYS.SYSTEM_CHECKIN_THRESHOLD,
                 Config.get().getString("web.system_checkin_threshold", "1"));
+    }
+
+    /**
+     * Run Sync_all on all systems
+     */
+    private void allSystemsSyncAll() {
+        try {
+            List<String> minionIds = MinionServerFactory.listMinions()
+                    .stream().map(MinionServer::getMinionId).toList();
+            GlobalInstanceHolder.SALT_API.syncAllAsync(new MinionList(minionIds));
+            log.info("Sync all scheduled on all systems");
+        }
+        catch (Exception e) {
+            log.error("Error running sync_all. Ignoring.", e);
+        }
     }
 }
