@@ -23,7 +23,9 @@ import com.redhat.rhn.domain.action.ActionFactory;
 import com.redhat.rhn.domain.server.MinionServer;
 import com.redhat.rhn.domain.server.MinionServerFactory;
 import com.redhat.rhn.domain.server.VirtualInstance;
+import com.redhat.rhn.domain.user.User;
 import com.redhat.rhn.manager.action.ActionManager;
+import com.redhat.rhn.manager.system.SystemManager;
 import com.redhat.rhn.taskomatic.TaskomaticApiException;
 
 import com.suse.manager.reactor.hardware.CpuArchUtil;
@@ -47,6 +49,7 @@ import com.google.gson.reflect.TypeToken;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
+import java.time.Instant;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Date;
@@ -55,6 +58,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 
@@ -87,7 +92,7 @@ public class JobReturnEventMessageAction implements MessageAction {
                 jobReturnEvent.getData().getResult(JsonElement.class));
         }
         catch (JsonSyntaxException e) {
-            LOG.error("JSON syntax error while decoding into a StateApplyResult:");
+            LOG.error("JSON syntax error while decoding into a StateApplyResult:", e);
             LOG.error(jobReturnEvent.getData().getResult(JsonElement.class).toString());
         }
         return jsonResult;
@@ -105,13 +110,11 @@ public class JobReturnEventMessageAction implements MessageAction {
         String function = jobReturnEvent.getData().getFun();
 
         List<Map<String, Object>> functionArgs = new LinkedList<>();
-        if (jobReturnEvent.getData().getFunArgs() instanceof List) {
-            List<Object> funArgs = (List<Object>) jobReturnEvent.getData().getFunArgs();
-            if (!funArgs.isEmpty() && funArgs.get(0) instanceof Map) {
-                functionArgs = funArgs.stream().filter(x -> x instanceof Map)
-                        .map(x -> (Map<String, Object>) x).collect(Collectors.toList());
+        if (jobReturnEvent.getData().getFunArgs() instanceof List funArgs &&
+                !funArgs.isEmpty() && funArgs.get(0) instanceof Map) {
+                functionArgs = funArgs.stream().filter(x -> x instanceof Map).toList();
             }
-        }
+
         boolean isFunctionTestMode = functionArgs.stream()
                 .anyMatch(e -> e.containsKey("test") && Boolean.parseBoolean(e.get("test").toString()));
 
@@ -142,9 +145,10 @@ public class JobReturnEventMessageAction implements MessageAction {
         Optional<Boolean> isActionChainResult = isActionChainResult(jobReturnEvent);
         boolean isActionChainInvolved = isActionChainResult.filter(isActionChain -> isActionChain).orElse(false);
         isActionChainResult.filter(isActionChain -> isActionChain).ifPresent(isActionChain -> {
-            if (!jobResult.isPresent()) {
+            if (jobResult.isEmpty()) {
                 return;
             }
+            AtomicReference<Optional<User>> scheduler = new AtomicReference<>(Optional.empty());
             JsonElement jsonResult = jobResult.get();
             // The Salt reactor triggers a "suma-action-chain" job (mgractionchains.resume) at
             // 'minion/startup/event/'. This means the result might not be a JSON in case of
@@ -161,6 +165,7 @@ public class JobReturnEventMessageAction implements MessageAction {
                                     .flatMap(ActionChainFactory::getActionChain);
 
                     actionChain.ifPresent(ac -> {
+                            scheduler.set(Optional.ofNullable(ac.getUser()));
                             ac.getEntries().stream()
                                     .flatMap(ace -> ace.getAction().getServerActions().stream())
                                     .filter(sa -> sa.getServer().asMinionServer()
@@ -194,32 +199,49 @@ public class JobReturnEventMessageAction implements MessageAction {
                     actionChainResult,
                     stateResult -> false);
 
-            boolean packageRefreshNeeded = !isFunctionTestMode && actionChainResult.entrySet().stream()
+            if (isFunctionTestMode) {
+                return;
+            }
+
+            Set<PackageChangeOutcome> packageRefreshNeeded = actionChainResult.entrySet().stream()
                     .map(entry -> SaltActionChainGeneratorService.parseActionChainStateId(entry.getKey())
                             .map(stateId -> handlePackageChanges(jobReturnEvent, entry.getValue().getName(),
                                     Optional.ofNullable(entry.getValue().getChanges().getRet())))
-                            .orElse(false))
-                    .collect(Collectors.toList())//This is needed to make sure we don't return early but execute
-                    .stream()                    // handlePackageChange for all the results in actions chain result.
-                    .anyMatch(Boolean.TRUE::equals);
-            if (packageRefreshNeeded) {
-                schedulePackageRefresh(jobReturnEvent.getMinionId());
+                            .orElse(PackageChangeOutcome.DONE)
+                    ).collect(Collectors.toSet());
+
+            if (packageRefreshNeeded.contains(PackageChangeOutcome.NEEDS_DELAYED_REFRESHING)) {
+                schedulePackageRefresh(scheduler.get(), jobReturnEvent.getMinionId(),
+                                       Date.from(Instant.now().plusSeconds(60)));
+            }
+            else if (packageRefreshNeeded.contains(PackageChangeOutcome.NEEDS_REFRESHING)) {
+                schedulePackageRefresh(scheduler.get(), jobReturnEvent.getMinionId());
             }
         });
 
         //For all jobs except when action chains are involved or the action was in test mode
-        if (!isActionChainInvolved && !isFunctionTestMode && handlePackageChanges(jobReturnEvent,
-                Optional.ofNullable(function).map(Xor::right), jobResult)) {
+        if (!isActionChainInvolved && !isFunctionTestMode) {
             Date earliest = new Date();
-            if (actionId.isPresent()) {
-                Optional<Action> action = Optional.ofNullable(ActionFactory.lookupById(actionId.get()));
-                if (action.isPresent() && action.get().getActionType().equals(ActionFactory.TYPE_DIST_UPGRADE)) {
-                    Calendar calendar = Calendar.getInstance();
-                    calendar.add(Calendar.SECOND, 30);
-                    earliest = calendar.getTime();
+            PackageChangeOutcome changeOutcome = handlePackageChanges(jobReturnEvent,
+                            Optional.ofNullable(function).map(Xor::right), jobResult);
+            if (changeOutcome != PackageChangeOutcome.DONE) {
+                if (changeOutcome == PackageChangeOutcome.NEEDS_DELAYED_REFRESHING) {
+                    earliest = Date.from(Instant.now().plusSeconds(60));
                 }
+                Optional<User> scheduler = Optional.empty();
+                if (actionId.isPresent()) {
+                    Optional<Action> action = Optional.ofNullable(ActionFactory.lookupById(actionId.get()));
+                    if (action.isPresent()) {
+                        scheduler = Optional.ofNullable(action.get().getSchedulerUser());
+                        if (action.get().getActionType().equals(ActionFactory.TYPE_DIST_UPGRADE)) {
+                            Calendar calendar = Calendar.getInstance();
+                            calendar.add(Calendar.SECOND, 30);
+                            earliest = calendar.getTime();
+                        }
+                    }
+                }
+                schedulePackageRefresh(scheduler, jobReturnEvent.getMinionId(), earliest);
             }
-            schedulePackageRefresh(jobReturnEvent.getMinionId(), earliest);
         }
 
         // Check if event was triggered in response to state scheduled at minion start-up event
@@ -229,6 +251,7 @@ public class JobReturnEventMessageAction implements MessageAction {
                             .ifPresent(result-> {
                                 SystemInfo systemInfo = Json.GSON.fromJson(result, SystemInfo.class);
                                 saltUtils.updateSystemInfo(systemInfo, minion);
+                                SystemManager.updateSystemOverview(minion.getId());
                             }));
 
             /* Check in case any Action update it could complete any ActionChain that is still pending on that action.
@@ -286,38 +309,38 @@ public class JobReturnEventMessageAction implements MessageAction {
      * @param jobReturnEvent jobReturnEvent
      * @param function salt module name
      * @param jobResult result
-     * @return return false If there is enough information to update database with new Package information(delta)
-     *         return true If information is not enough and a full package refresh is needed
+     * @return return a PackageChangeOutcome
+     *         DONE when there is enough information to update database with new Package information(delta)
+     *         NEEDS_REFRESHING when information is not enough and a full package refresh is needed.
+     *         If a refresh should happen with a delay, NEEDS_DELAYED_REFRESHING is returned
      */
-    private boolean handlePackageChanges(JobReturnEvent jobReturnEvent, Optional<Xor<String[], String>> function,
-                                                Optional<JsonElement> jobResult) {
+    private PackageChangeOutcome handlePackageChanges(JobReturnEvent jobReturnEvent,
+                    Optional<Xor<String[], String>> function, Optional<JsonElement> jobResult) {
 
         return MinionServerFactory.findByMinionId(jobReturnEvent.getMinionId()).flatMap(minionServer ->
                 jobResult.map(result -> {
-                    boolean fullPackageRefreshNeeded = false;
+                    PackageChangeOutcome refreshType = PackageChangeOutcome.DONE;
                     try {
-                        if (forcePackageListRefresh(jobReturnEvent) ||
-                                saltUtils.handlePackageChanges(function, result,
-                                        minionServer) ==  PackageChangeOutcome.NEEDS_REFRESHING) {
-                            fullPackageRefreshNeeded = true;
-                        }
+                        refreshType = saltUtils.handlePackageChanges(function, result, minionServer);
                     }
                      catch (JsonParseException e) {
                         LOG.warn("Could not determine if packages changed in call to {} because of a parse error",
-                                 function);
-                        LOG.warn(e);
+                                 function, e);
                     }
-                    return fullPackageRefreshNeeded;
+                    if (refreshType == PackageChangeOutcome.DONE && forcePackageListRefresh(jobReturnEvent)) {
+                        refreshType = PackageChangeOutcome.NEEDS_REFRESHING;
+                    }
+                    return refreshType;
                 })
-        ).orElse(false);
+        ).orElse(PackageChangeOutcome.DONE);
     }
 
     /**
      * Schedule package refresh on the minion
      * @param minionId ID of the minion for which package refresh should be scheduled
      */
-    private void schedulePackageRefresh(String minionId) {
-        schedulePackageRefresh(minionId, new Date());
+    private void schedulePackageRefresh(Optional<User> user, String minionId) {
+        schedulePackageRefresh(user, minionId, new Date());
     }
 
     /**
@@ -325,13 +348,13 @@ public class JobReturnEventMessageAction implements MessageAction {
      * @param minionId ID of the minion for which package refresh should be scheduled
      * @param earliest The earliest time this action should be run.
      */
-    private void schedulePackageRefresh(String minionId, Date earliest) {
+    private void schedulePackageRefresh(Optional<User> user, String minionId, Date earliest) {
         MinionServerFactory.findByMinionId(minionId).ifPresent(minionServer -> {
             try {
-                ActionManager.schedulePackageRefresh(minionServer.getOrg(), minionServer, earliest);
+                ActionManager.schedulePackageRefresh(user, minionServer, earliest);
             }
             catch (TaskomaticApiException e) {
-                LOG.error(e);
+                LOG.error(e.getMessage(), e);
             }
         });
     }
