@@ -17,17 +17,22 @@ package com.suse.manager.webui.controllers.channels;
 import static com.redhat.rhn.common.hibernate.HibernateFactory.doWithoutAutoFlushing;
 import static com.suse.manager.webui.controllers.channels.ChannelsUtils.generateChannelJson;
 import static com.suse.manager.webui.controllers.channels.ChannelsUtils.getPossibleBaseChannels;
-import static com.suse.manager.webui.utils.SparkApplicationHelper.json;
+import static com.suse.manager.webui.utils.SparkApplicationHelper.result;
 import static com.suse.manager.webui.utils.SparkApplicationHelper.withUser;
 import static spark.Spark.get;
 
 import com.redhat.rhn.domain.channel.Channel;
 import com.redhat.rhn.domain.contentmgmt.ContentProjectFactory;
 import com.redhat.rhn.domain.user.User;
+import com.redhat.rhn.frontend.dto.ChannelTreeNode;
+import com.redhat.rhn.manager.channel.ChannelManager;
 
 import com.suse.manager.webui.utils.gson.ChannelsJson;
 import com.suse.manager.webui.utils.gson.ResultJson;
 
+import com.google.gson.reflect.TypeToken;
+
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
@@ -51,6 +56,8 @@ public class ChannelsApiController {
                 withUser(ChannelsApiController::getAllChannels));
         get("/manager/api/channels/modular",
                 withUser(ChannelsApiController::getModularChannels));
+        get("/manager/api/channels/owned",
+                withUser(ChannelsApiController::getOwnedChannels));
     }
 
     /**
@@ -80,7 +87,7 @@ public class ChannelsApiController {
             );
             jsonChannelsFiltered.sort(Comparator.comparing(cIn -> cIn.getBase().getId()));
 
-            return json(res, ResultJson.success(jsonChannelsFiltered));
+            return result(res, ResultJson.success(jsonChannelsFiltered), new TypeToken<>() { });
         });
     }
 
@@ -97,9 +104,22 @@ public class ChannelsApiController {
                 .distinct()
                 .filter(Channel::isModular)
                 .map(ChannelsJson.ChannelJson::new)
-                .collect(Collectors.toList());
+                .toList();
 
-        return json(res, ResultJson.success(jsonChannels));
+        return result(res, ResultJson.success(jsonChannels), new TypeToken<>() { });
     }
 
+
+    /**
+     * Get channels owned by a user
+     *
+     * @param req the request
+     * @param res the response
+     * @param user the current user
+     * @return the json response
+     */
+    public static String getOwnedChannels(Request req, Response res, User user) {
+        List<ChannelTreeNode> channels = new ArrayList<>(ChannelManager.ownedChannelsTree(user));
+        return result(res, ResultJson.success(channels), new TypeToken<>() { });
+    }
 }
