@@ -20,7 +20,6 @@ import org.apache.commons.lang3.builder.EqualsBuilder;
 import org.apache.commons.lang3.builder.HashCodeBuilder;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
@@ -31,22 +30,15 @@ public class ConfigChannelJson {
     private Long id;
     private String name;
     private String label;
+    private String description;
     private String type;
     private Integer position;
     private boolean assigned;
 
     /**
-     * @return the id
+     * Default constructor
      */
-    public Long getId() {
-        return id;
-    }
-
-    /**
-     * @param idIn the id
-     */
-    public void setId(Long idIn) {
-        this.id = idIn;
+    public ConfigChannelJson() {
     }
 
     /**
@@ -58,6 +50,7 @@ public class ConfigChannelJson {
         this.id = channelIn.getId();
         this.name = channelIn.getName();
         this.label = channelIn.getLabel();
+        this.description = channelIn.getDescription();
         this.type = channelIn.getConfigChannelType().getLabel();
         this.position = null;
         this.assigned = false;
@@ -73,6 +66,20 @@ public class ConfigChannelJson {
         this(channelIn);
         this.position = positionIn;
         this.assigned = true;
+    }
+
+    /**
+     * @return the id
+     */
+    public Long getId() {
+        return id;
+    }
+
+    /**
+     * @param idIn the id
+     */
+    public void setId(Long idIn) {
+        this.id = idIn;
     }
 
     /**
@@ -101,6 +108,20 @@ public class ConfigChannelJson {
      */
     public void setLabel(String labelIn) {
         this.label = labelIn;
+    }
+
+    /**
+     * @return the description
+     */
+    public String getDescription() {
+        return description;
+    }
+
+    /**
+     * @param descriptionIn the description
+     */
+    public void setDescription(String descriptionIn) {
+        this.description = descriptionIn;
     }
 
     /**
@@ -153,15 +174,14 @@ public class ConfigChannelJson {
     public static List<ConfigChannelJson> listOrdered(List<ConfigChannel> channelsIn) {
         return IntStream.range(0, channelsIn.size())
                 .mapToObj(i -> new ConfigChannelJson(channelsIn.get(i), i + 1))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public boolean equals(Object other) {
-        if (!(other instanceof ConfigChannelJson)) {
+        if (!(other instanceof ConfigChannelJson castOther)) {
             return false;
         }
-        ConfigChannelJson castOther = (ConfigChannelJson) other;
         return new EqualsBuilder()
                 .append(name, castOther.name)
                 .append(label, castOther.label)
